Fixes known ligature

--- a/src/00-introduccion.html
+++ b/src/00-introduccion.html
@@ -49,7 +49,7 @@
       reconocimiento de las propias raíces, la profundización de la
       espiritualidad exploradoril y la tarea de asumir un lugar como
       sujeto-en-construcción de sus propios proyectos y sueños. El acercamiento
-      a la persona de Jesús a través del testimonio de Don Bosco, y su reﬂejo en
+      a la persona de Jesús a través del testimonio de Don Bosco, y su reflejo en
       las amistades, la familia y la comunidad exploradoril como parte de la
       Iglesia animan con amor la vocación de servir a Dios en los hermanos.
     </p>
@@ -122,7 +122,7 @@
     </p>
     <p>
       En función de ambas evaluaciones, y del intercambio y diálogo con las
-      realidades, el equipo comienza a desarrollar, reﬂexionar en el armado de
+      realidades, el equipo comienza a desarrollar, reflexionar en el armado de
       nuevas consignas actualizando los ya existentes.
     </p>
     <p>
@@ -160,7 +160,7 @@
     </ul>
     <p>
       Trabajar con adolescentes y jóvenes implica incorporar permanentemente la
-      vida nueva que ﬂorece y trae consigo nuevos hábitos, tecnologías, modas,
+      vida nueva que florece y trae consigo nuevos hábitos, tecnologías, modas,
       novedades y desafíos. Con lo cual las consignas ameritan una actualización
       permanente a lo largo del tiempo que validen su vigencia.
     </p>
@@ -300,7 +300,7 @@
       De manera complementaria a las consignas, se incluye el relato de Bui
       Camey correpondiente a esta meta exploradoril. Creemos que el contenido
       del libro hace a la mística oratoriana que se respira en el exploradorismo
-      invitando a la actuación, la risa y la propia reﬂexión que incorpora una
+      invitando a la actuación, la risa y la propia reflexión que incorpora una
       enseñanza de vida relacionada con los valores del Evangelio.
     </p>
     <h3>
@@ -497,7 +497,7 @@
         <td>Familia</td>
         <td>Identidad</td>
         <td>
-          ... reﬂexionaron acerca de la importancia de valorar a la propia
+          ... reflexionaron acerca de la importancia de valorar a la propia
           familia. <br />… se aproximaron a descubrir al grupo como familia y al
           movimiento como una gran familia exploradoril.
         </td>
@@ -539,7 +539,7 @@
           tomar conciencia de la necesidad de crecer armónicamente, descubriendo
           una forma de relacinarse con el mundo que transforma sus vínculos,
           copartiendo las dificultades del crecimiento con el grupo. <br />…
-          reﬂexionaron sobre dejar de actuar como niños o niñas y superar el
+          reflexionaron sobre dejar de actuar como niños o niñas y superar el
           miedo y las dificultades propias al crecimieto, aceptando los cambios
           en la sexualidad integrándola a toda su persona.
         </td>
@@ -566,7 +566,7 @@
           ... lograron descubrir que otras personas o grupos tinen
           características propias, diferentes e incluso difícles de entender,
           pero que todas las personas tienen la misma dignidad y merecen
-          respeto. <br />… reﬂexionaron acerca de la importancia de poder
+          respeto. <br />… reflexionaron acerca de la importancia de poder
           ubcarse contextualmente y relacionarse con respeto a los demás.<br />…
           reconocieron la relevancia de no discriminar, ni hacer diferencias con
           sus compañeros y otras personas.
@@ -611,7 +611,7 @@
         <td>Familia</td>
         <td>Identidad</td>
         <td>
-          ... lograron adquirir distintas herramientas de reﬂexión y análisis
+          ... lograron adquirir distintas herramientas de reflexión y análisis
           crítico para cuestionar su propio sentido cmún y tener una mente más
           abierta a pensar la realidad en términos complejos. <br />…
           comprendieron que la comunicación, la escucha de nuevas opiniones es
@@ -624,7 +624,7 @@
         <td>Proyecto de vida</td>
         <td>Identidad</td>
         <td>
-          ... reﬂexionaron sobre que el desarrollo de una pesonalidad madura
+          ... reflexionaron sobre que el desarrollo de una pesonalidad madura
           requiere una identificación sexual constituida, integrada y aceptada,
           con dos caminos posibles: ser varones o mujeres, y que integrar la
           sxualidad conforma una parte fundamental de la identidad personal.
@@ -651,7 +651,7 @@
           ... lograron descubrir que pueden comprometerse dede lo que son y lo
           que tienen. <br />… se aproximaron a entender que la solidaridad no
           pasa sólo por el asistencialismo sino por la promisión integral de la
-          persona. <br />…reﬂexionaron sobre la actitud solidaria frente a las
+          persona. <br />…reflexionaron sobre la actitud solidaria frente a las
           necesidades que hay a su alrededor mediante una acción concreta y
           oración eficaz.
         </td>
@@ -665,7 +665,7 @@
           que todos están llamados a distiguirse de la mediocridad. <br />…
           lograron descubrir en la vida de los santos un ejeplo a seguir
           posible, atractivo, concreto, novedoso que los llama a ser felices
-          viviendo un estilo de vida que reﬂeja a Jesús. <br />…
+          viviendo un estilo de vida que refleja a Jesús. <br />…
           hogueras/rastreadores comenzaron a aceptar que los propios defectos y
           fragilidades no se oponen a la santidad, y asumir la vida como un
           camino de santidad que se hace todos los días. <br />… empezaron a
@@ -834,13 +834,13 @@
     <h3>2) LUEGO, “Y A VOS QUE TE PASA CON ESTE TEMA?”</h3>
     <p>
       Este nuevo espacio en las consignas está destinado a un tiempo formativo y
-      reﬂexivo propio para los animadores que tienen que prestar el servicio de
+      reflexivo propio para los animadores que tienen que prestar el servicio de
       animación de los Rastredores-Hogueras. Para revisar qué piensan, qué
       sienten cada uno en relación al tema que tendrán que abordar con los/as
-      chicos/as, para evitar transmitirles los propios conﬂictos.
+      chicos/as, para evitar transmitirles los propios conflictos.
     </p>
     <p>
-      Además te proponemos un texto del evangelio para orar y reﬂexionar, y que
+      Además te proponemos un texto del evangelio para orar y reflexionar, y que
       esta cita ayu-
     </p>
     <p>
@@ -876,7 +876,7 @@
     <p>
       Este es el momento de elegir que “actividad central” resulta más
       conveniente, según la realidad del grupo (gustos, actitudes, habilidades,
-      etc.). Esta actividad nos ayudará a seguir reﬂexionando sobre el contenido
+      etc.). Esta actividad nos ayudará a seguir reflexionando sobre el contenido
       de la consigna.
     </p>
     <h3>6) EVALUACIÓN PARA LOS RASTREADORES-HOGUERAS</h3>
