--- a/src/04-amistad.html
+++ b/src/04-amistad.html
@@ -104,7 +104,7 @@
         Ustedes son mis amigos si hacen lo que yo les mando.»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       El amor de Dios es tan pero tan grande, que Jesús nos llama amigos. ¡Pero
       ojo! Claramente nos advierte “Ustedes son mis amigos si hacen lo que yo
@@ -192,7 +192,7 @@
       dé cuenta.
     </p>
     <p>Tampoco que sea tan evidente porque el juego pierde su gracia.</p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Para llevar a cabo su misión en el mundo, Jesús se hizo amigo de Pedro,
       Santiago y su hermno Juan, a Felipe, Andrés, Bartolomé, Mateo, Tomás,
@@ -325,7 +325,7 @@
       recibir y dar.
     </p>
     <p>
-      Aunque no haya conﬂictos, la indiferencia con los compañeros es una mala
+      Aunque no haya conflictos, la indiferencia con los compañeros es una mala
       señal del grado de amistad que hay en el grupo y un aspecto a mejorar.
     </p>
     <p>
@@ -492,7 +492,7 @@
     <p>¿Podemos ser amigos de Jesús?</p>
     <p>¿Podemos unirnos a Él como las dos partes del puente?</p>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1.</li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
       <li><strong>- Palabra de Dios:</strong> Ver actividad N°1.</li>
     </ul>
     <h3>ACTIVIDAD N° 3 - SALIDA DE PATRULLA</h3>
@@ -525,7 +525,7 @@
     <p>
       En base a lo que se va conversando descubrir las características de la
       verdadera amistad y descubrir la importancia de ser amigos no sólo en
-      horario de actividades. Luego profundizar la reﬂexión:
+      horario de actividades. Luego profundizar la reflexión:
     </p>
     <p>¿Por qué queremos actuar así?</p>
     <p>¿En qué se fundamenta la ‘amistad como cristianos?</p>
@@ -587,7 +587,7 @@
       <li>¿Qué enseñanza nos dejan?</li>
     </ul>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1.</li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
       <li><strong>- Palabra de Dios:</strong> Ver actividad N°1.</li>
     </ul>
     <h2>EVALUACIÓN</h2>
