--- a/src/05-familia.html
+++ b/src/05-familia.html
@@ -80,7 +80,7 @@
         por mandatos familiares simplemente?
       </li>
     </ul>
-    <h3>- Reﬂexión</h3>
+    <h3>- Reflexión</h3>
     <p>
       Un valor es un mensaje que es importante, deseable o apreciado para una
       persona o grupo de personas. Todos, desde niños, recibimos, aunque no se
@@ -125,7 +125,7 @@
         enseñanzas cristianas.»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <ul>
       <li>- ¿Qué te hace pensar esta lectura?</li>
       <li>- ¿A qué te recuerda?</li>
@@ -146,7 +146,7 @@
     </ul>
     <h2>ENTENDIÉNDOLOS:</h2>
     <p>
-      Actualmente la inﬂuencia de modelos y costumbres sociales a través del
+      Actualmente la influencia de modelos y costumbres sociales a través del
       furor mediático, rdes sociales y de los amigos genera dilemas y
       controversias entre los padres y el adolescente. Los padres o los
       responsables del adolescente se encuentran en la disyuntiva de dejarlos
@@ -165,7 +165,7 @@
     </p>
     <h2>OBJETIVOS CUMPLIDOS:</h2>
     <p>
-      Los Rastreadores / Hogueras reﬂexionaron acerca de la importancia de
+      Los Rastreadores / Hogueras reflexionaron acerca de la importancia de
       valorar a la propia familia.A su vez se aproximaron a descubrir al grupo
       como familia y al movimiento como una gran familia exploradoril.
     </p>
@@ -255,7 +255,7 @@
       jamás tenía para terminar el mes. Si alguien pretendía distraerlo, él
       mostraba con cuentas y números que no podía descuidarse un instante. Que
       siempre estaba al borde de la ruina. El hijo número cuatro era obrero.
-      Trabajaba en una pequeña industria, y siempre vivía a los tira y aﬂoja con
+      Trabajaba en una pequeña industria, y siempre vivía a los tira y afloja con
       el patrón. Si había aumento, trabajaba. Si no había aumento, paraba.
       Naturalmete, entre el obrero y el patrón de la fábrica no había más que
       contrariedad; a ver cuál de los dos vencía. Entonces el patrón quería
@@ -368,7 +368,7 @@
       en donde se concrete las ganas de seguir creciendo en los vínculos
       familiares y en las relaciones fraternas.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Familia cristiana:</strong> La familia cristiana es una pequeña
       iglesia que está fundada sobre los sacramentos del bautismo y del
@@ -492,7 +492,7 @@
       <li>>> ¿Cómo es la Iglesia que queremos ser?</li>
       <li>>> ¿Qué podemos aportar para construirla?</li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Hermanos y compañeros:</strong> En el grupo se viven relaciones
       fraternas que se comparten con una actitud de lealtad y setido de
