--- a/src/06-dialogo.html
+++ b/src/06-dialogo.html
@@ -139,7 +139,7 @@
       un lugar sagrado.
     </p>
     <p>Para ello sé Señor, que cuento con Tu Gracia.</p>
-    <h3>- Reﬂexión</h3>
+    <h3>- Reflexión</h3>
     <p>
       Como animadores tenemos la necesidad de “sacarnos el calzado” para entrar
       en otro, en nuestro grupo de Rastreadores-Hogueras, en nuestra comunidad.
@@ -174,7 +174,7 @@
         quedó curada.»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Para contextualizar correctamente esta cita bíblica, es necesario aclarar
       que Mateo presenta a esta mujer con el apelativo de “cananea”. En la época
@@ -195,7 +195,7 @@
       otros. Pueden ser complicados para expresar sus inquietudes, constándole
       hablar de cosas personales y profundas. Nos podemos encontrar que viven en
       una cultura de evasión de uno mismo y de los problemas sociales
-      iﬂuenciados por la moda y el ambiente. Con la aparición del chat y las
+      ifluenciados por la moda y el ambiente. Con la aparición del chat y las
       redes sociales nos encontramos en un mundo donde el diálogo existe, pero
       de manera despersonalizada y algo anónima.
     </p>
@@ -266,7 +266,7 @@
         dos columnas y explicar las características de un buen diálogo
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong><em>Importancia del diálogo:</em></strong> El diálogo, la actitud
       de escucha, la expresión de lo que pasa y se siente, son necesarios para
@@ -420,7 +420,7 @@
         relaciones antagónicas?
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong><em>Causas de la incomunicación:</em></strong> La primera causa
       que suele aparecer es "El otro explicó mal". En general no se sale de este
@@ -434,7 +434,7 @@
       sencillamente por el grupo. Hay que ayudar a descubrirla.
     </p>
     <h3>Palabra de Dios:</h3>
-    <h3>Reﬂexionar antes de hablar (Proverbios 18, 1-2)</h3>
+    <h3>Reflexionar antes de hablar (Proverbios 18, 1-2)</h3>
     <p>
       <em
         >El que vive aislado sigue sus caprichos y se irrita contra todo sano
@@ -499,7 +499,7 @@
         separa en verbal y no verbal, para sintetizar las ideas principales
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong><em>Otras formas de comunicación:</em></strong> Además de las
       palabras, existen muchas formas de expresase que muchas veces ni nos damos
@@ -516,7 +516,7 @@
       nos vamos conociendo por ejemplo las miradas y llega un punto que con solo
       mirar a un amigo nos damos cuenta cómo está.
     </p>
-    <h3>Palabra de Dios: Reﬂexionar antes de hablar (Proverbios 18, 1-2)</h3>
+    <h3>Palabra de Dios: Reflexionar antes de hablar (Proverbios 18, 1-2)</h3>
     <h3>ACTIVIDAD ESPECIAL: ENCUENTRO CON OTRO GRUPO</h3>
     <h3>- Orientación:</h3>
     <p>
@@ -533,7 +533,7 @@
       pueda continuar. Es muy importante que no sea algo masivo sino de grupo a
       grupo.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong><em>Apertura a otros grupos:</em></strong> En la medida en que
       nuestro grupo se comunica con otro se van dado procesos que ayudan al
@@ -595,7 +595,7 @@
     <p>Con ella descubrí que el Dialogo…</p>
     <p>El Dialogo entre los Rastreadores / Hogueras es…</p>
     <p>Por eso, creo que necesito seguir trabajando con ellos en…</p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       El 30 de diciembre de 1874, enviaba a uno de sus directores, D. Juan
       Bonetti, un “aguinaldo” en donde se destaca la siguiente sugerencia: “Haz
