--- a/src/07-oracion.html
+++ b/src/07-oracion.html
@@ -55,7 +55,7 @@
     <h3>- Orientación:</h3>
     <p>
       La finalidad de esta consigna es redescubrir Jesucristo en lo cotidiano a
-      través de un diálogo más ﬂuido con él en todas las actividades que
+      través de un diálogo más fluido con él en todas las actividades que
       hagamos. San Agustín decía que “cantar es rezar dos veces”, la beata Laura
       Vicuña repetía “para mí es lo mismo rezar o trabajar, rezar o jugar, rezar
       o dormir. Haciendo lo que me mandan, hago lo que Dios quiere que haga y
@@ -88,7 +88,7 @@
         ellos.»</em
       >
     </p>
-    <h3>Reﬂexión:</h3>
+    <h3>Reflexión:</h3>
     <p>
       Dios, Uno y Trino, desde el principio es “comunidad”. Por eso Jesús
       recomienda con rezar en comunidad para sentir de lleno su presencia. Cada
@@ -167,11 +167,11 @@
     <p>
       ¿Cómo agradecer con la oración? "Los diez leprosos" (Lc. 17, 11-19) Al
       rato reunirse todos y hacer un panel con lo que cada pareja conversó.
-      Relacionar de acuerdo a las lecturas utilizadas y las reﬂexiones de cada
+      Relacionar de acuerdo a las lecturas utilizadas y las reflexiones de cada
       pareja. Prepara un propósito concreto grupal con alguno de los diferentes
       aspectos tratados, y luego cada uno busca un propósito personal.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Para algunos, la oración lleva a aislarse de la vida, de lo cotidiano, de
       la historia; a sumergirse en la nada, en el vacío; a huir de sí mismo.
@@ -245,10 +245,10 @@
     <p>
       Contemplar no es hacer un intervalo en la acción, sino añadirle una nueva
       cualidad. Trabajar, estudiar, jugar, son actividades en las que el hombre
-      reﬂexiona y contempla.
+      reflexiona y contempla.
     </p>
     <p>
-      Contemplar supone un paso más que observar: cuando reﬂexiona sobre los
+      Contemplar supone un paso más que observar: cuando reflexiona sobre los
       hechos de la vida, vive como un observador. Cuando investiga el sentido
       último de tales hechos, vive como un contemplativo.
     </p>
@@ -267,11 +267,11 @@
     <p>
       La mística exploradoril de la vida al aire libre y en contacto con la
       naturaleza, nos permite la maravillosa experiencia de descubrir a Dios de
-      una manera especial. Desde una pequeña ﬂor hasta la inmensidad del mar,
+      una manera especial. Desde una pequeña flor hasta la inmensidad del mar,
       desde una suave brisa hasta una tormenta eléctrica, todo en la naturaleza
       nos muestra a Dios, nos hace tenerlo más cerca y nos permite una
-      experiencia de oración exploradoril. Así como las obras de arte reﬂejan la
-      mano del artista que las creo, la naturaleza reﬂeja la mano de nuestro
+      experiencia de oración exploradoril. Así como las obras de arte reflejan la
+      mano del artista que las creo, la naturaleza refleja la mano de nuestro
       Padre creador. Por eso la contemplación de la naturaleza es un medio de
       oración y encuentro con Dios.
     </p>
@@ -347,9 +347,9 @@
     </p>
     <p>
       La meditación no es sólo el silencio, la calma o la tranquilidad. La
-      meditación no se acaba al reﬂexionar con atención sobre un hecho. No basta
+      meditación no se acaba al reflexionar con atención sobre un hecho. No basta
       tampoco con ahondar profundamente detro la propia personalidad. Silencio,
-      reﬂexión y buscar en las profundidades de la persona, son sólo actitudes
+      reflexión y buscar en las profundidades de la persona, son sólo actitudes
       preparatorias de la meditación.
     </p>
     <p>
@@ -384,7 +384,7 @@
     <p>
       La oración forma parte del proceso de maduración y crecimiento del grupo,
       permite un crcimiento en la fe y brinda un ámbito de respeto donde se
-      puede reﬂexionar sobre la vida del grupo y de cada uno.
+      puede reflexionar sobre la vida del grupo y de cada uno.
     </p>
     <p>
       Rezando de a varios se descubre la fuerza de la oración «Donde dos o más
@@ -420,7 +420,7 @@
       nuestra, con una identidad propia. Uno de ellos son los numerosos símbolos
       con los que cuenta el movmiento que nos hablan constantemente de la
       presencia de Dios. Son en general elementos de la vida cotidiana (fuego,
-      agua, estrellas, colores, leños, ﬂores, etc.) a través de los cuales
+      agua, estrellas, colores, leños, flores, etc.) a través de los cuales
       dialogamos con Dios.
     </p>
     <p>
@@ -679,7 +679,7 @@
     <h3>- Orientaciones:</h3>
     <p>
       La actividad pretende despertar la sensación de sentirse Iglesia-comunidad
-      a partir de la participación activa en actividades que reﬂejen la fe de
+      a partir de la participación activa en actividades que reflejen la fe de
       nuestro pueblo.
     </p>
     <h3>- Actividad:</h3>
@@ -717,7 +717,7 @@
       comentarlo.
     </h3>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1</li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1</li>
       <li><strong>- Palabra de Dios:</strong> Ver actividad N°1</li>
     </ul>
     <h3>ACTIVIDADES N° 3 – RECLAMOS POPULARES</h3>
@@ -725,7 +725,7 @@
     <p>
       La actividad pretende reconocer los reclamos de justicia que hace el
       pueblo como una forma de oración y además reconocer la fuerza que tiene la
-      oración cuando ﬂorece de una comunidad.
+      oración cuando florece de una comunidad.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -749,7 +749,7 @@
       </li>
     </ul>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1</li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1</li>
       <li><strong>- Palabra de Dios:</strong> Ver actividad N°1</li>
     </ul>
     <h2>EVALUACIÓN</h2>
@@ -814,7 +814,7 @@
     <p>
       Guarda tu lengua del mal y tus labios de la mentira, evita el mal y
       realiza el bien. A los justos, Dios los guía y escucha sus clamores, el
-      Señor es fuerza de los aﬂigidos.
+      Señor es fuerza de los afligidos.
     </p>
     <p>
       <strong><em>Tomando mate</em></strong>
