--- a/src/08-crecimiento.html
+++ b/src/08-crecimiento.html
@@ -94,7 +94,7 @@
     <p>
       Te proponemos que realices un breve autoexamen para examinar en qué lugar
       te encontrás hoy, y en qué condiciones estás para trabajar con esta
-      consigna. Para ello te pedimos que contestes y reﬂexiones sobre las
+      consigna. Para ello te pedimos que contestes y reflexiones sobre las
       preguntas que se describen a continuación:
     </p>
     <ul>
@@ -114,7 +114,7 @@
       el periodo en el cual se están despidiendo de su cuerpo de niño y niña.
     </p>
     <p>
-      Por otro lado, es importante reﬂexionar acerca de que la responsabilidad
+      Por otro lado, es importante reflexionar acerca de que la responsabilidad
       por el crecimiento era de los padres, pero ahora es de cada adolescente.
       El desarrollo requiere un cambio y a la mayoría de nosotros nos incomodan
       los cambios. El crecimiento exige la entrega temporal de la seguridad.
@@ -146,7 +146,7 @@
         adquirirá el arte de dirigir.»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       El crecimiento no se produce automáticamente, puesto que sólo una vez eres
       joven, pero pdes ser inmaduro por tiempo indefinido. Todos los años la
@@ -172,16 +172,16 @@
       vuelvan más independientes, que tiendan a pasar mayor tiempo con sus
       amigos que con la familia. Su sentido de responsabilidad aumentará y
       aprenderán a depender de sí mismos. El adolescente en menor o mayor medida
-      se verá inﬂuenciado por sus amigos y por la presión de grupo, por lo que
+      se verá influenciado por sus amigos y por la presión de grupo, por lo que
       tal vez intentará probar nuevas sensaciones, como fumar, tomar bebidas
       alcohólicas
     </p>
     <p>
       o empezar a ser sexualmente activo. Es así como van alcanzando la madurez
       sexual, pero todavía no han aprendido a controlar sus nuevos deseos
-      sexuales. Al mismo tiempo estas percepciones van generando conﬂictos y
+      sexuales. Al mismo tiempo estas percepciones van generando conflictos y
       problemas de moralidad en ellos. Por otro lado, su relación y vínculos con
-      los otros también puede que se tornen conﬂictivos.
+      los otros también puede que se tornen conflictivos.
     </p>
     <p>
       Por otra parte, sufren una situación de desequilibrio, provocada por el
@@ -224,7 +224,7 @@
         crecimiento con el grupo.
       </li>
       <li>
-        - Los Rastreadores/Hogueras reﬂexionaron sobre dejar de actuar como
+        - Los Rastreadores/Hogueras reflexionaron sobre dejar de actuar como
         niños o niñas y suprar el miedo y las dificultades propias al
         crecimiento, aceptando los cambios en la sexualidad integrándola a toda
         su persona.
@@ -262,7 +262,7 @@
       anécdota de su niñez en la que intervenga. Si algunos no trajeron nada,
       que cuenten alguna otra anécdota.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Plantear y conversar entre todos. Apuntar a que puedan reconocer la
       continuidad de sí mismos a través del tiempo y las transformaciones del
@@ -276,7 +276,7 @@
       <li>- ¿En tu carácter?</li>
     </ul>
     <p>
-      Continuando con la reﬂexión, sabemos que Jesús nos llama, él es quien nos
+      Continuando con la reflexión, sabemos que Jesús nos llama, él es quien nos
       conoce de mmoria, sabe de nuestros cambios y de las alegrías y dificultades
       que ello implica. Por eso nos llama por nuestro nombre y nos invita a
       seguir sus pasos en este camino de la vida en que nos vamos transformando,
@@ -316,7 +316,7 @@
     </p>
     <p>
       La casa de los Mazzarello era una "gran casa", donde abuela, padres, tíos
-      hermanos y primos creaban un clima de familia que inﬂuyen en Maín
+      hermanos y primos creaban un clima de familia que influyen en Maín
       ensanchando su corazón, para descubrir y responder a las necesidades de
       los demás antes que a las propias. De su madre, Magdalena Calcagno, recibe
       su formación femenina, el sentido práctico, su ser alegre y comunicativo.
@@ -346,7 +346,7 @@
         y juntarlas todas.
       </li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       La <strong>adolescencia</strong> no es un período estático, sino un
       proceso de búsqueda de la propia identidad. Se dan significativos cambios
@@ -430,7 +430,7 @@
         intentan descubrir el significado de cada uno de los dibujos.
       </li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Que cada uno escriba en un papel las dificultades que encuentra en su
       crecimiento y las poga en la cartelera, junto al dibujo que le parezca que
@@ -448,7 +448,7 @@
         se preocupen por mí.
       </li>
       <li>
-        • Garrote: Arreglar los conﬂictos por la fuerza, imponerse a los demás
+        • Garrote: Arreglar los conflictos por la fuerza, imponerse a los demás
         aunque no se tenga razón (insultos, violencia).
       </li>
       <li>
@@ -518,7 +518,7 @@
       adultos (padres, profesores, amigos, sacerdotes, radios, televisión,
       etc.) cuando hablan sobre ellos (o los adolescentes en general).
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       La <strong>adolescencia</strong> no es un período estático, sino un
       proceso de búsqueda de la propia identidad. Se dan significativos cambios
@@ -614,7 +614,7 @@
       expresás un sentimiento de cariño, te ayudan también a comunicarte con
       Dios." "Sentí tu rostro: Tus ojos: observás, mirás, admirás, contemplás.
       Tu nariz: respirás, olés, ollfateás. Tus labios, hablás, te comunicás,
-      sonreís, besás, gritás. Tu cerebro: pensás, reﬂexionás, te preguntás,
+      sonreís, besás, gritás. Tu cerebro: pensás, reflexionás, te preguntás,
       criticás, comprendés, elegís. Tus oídos: escuchás, oís." "Sentí tu
       corazón: en él se centran los sentimientos más íntimos, desde él sentís
       alegría, sufrimiento, amor, desconfianza."
@@ -629,7 +629,7 @@
       </li>
       <li>>> ¿Por qué crees que Jesús te creó así?</li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Te has dado cuenta de que tu cuerpo ya no es el de un niño o niña y
       presenta casi totalmente desarrolladas las características físicas y
@@ -666,7 +666,7 @@
     <p>
       En lo sexual nos cuesta ir gradualmente, aprender de los errores, conocer
       nuestros propios límites y aceptar otros, que suelen parecernos criterios
-      inﬂexibles y arbitrarios. Aprender es una actitud de acercamiento a lo
+      inflexibles y arbitrarios. Aprender es una actitud de acercamiento a lo
       desconocido, nos hace crecer como personas. Es un proceso con logros,
       errores retrocesos, éxitos y fracasos.
     </p>
@@ -770,9 +770,9 @@
       Andrés: Me disculpan, pero yo cada vez entiendo menos... Al final, la
       masturbación: ¿está bien o está mal? ¿Es normal o anormal?
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
-      Poner en común la: reﬂexión realizada. Invitar a profundizar y a clarificar
+      Poner en común la: reflexión realizada. Invitar a profundizar y a clarificar
       las ideas fundamentales del tema, presentando frases que sintetizan los
       aspectos principales.
     </p>
@@ -907,7 +907,7 @@
         mostrar la yerba y el filtro fraguados.
       </li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Presentar la analogía y comparación entre el mate cocido y la sexualidad.
     </p>
