--- a/src/09-perdon.html
+++ b/src/09-perdon.html
@@ -52,7 +52,7 @@
     <p>Elegiste esta consigna porque observo que:</p>
     <p>
       Los rastreadores-hogueras se encuentran divididos entre ellos en
-      subgrupos. Esos sugrupos reﬂejan el rencor, la rivalidad, el maltrato y la
+      subgrupos. Esos sugrupos reflejan el rencor, la rivalidad, el maltrato y la
       falta de perdón entre algunos exploradores debido a heridas del pasado
       que no fueron sanadas.
     </p>
@@ -89,7 +89,7 @@
     <h3>- Dinámica</h3>
     <p>Plantear algunas preguntas entre los animadores:</p>
     <p>
-      Cuando tenés algún conﬂicto con otra persona y hace falta sanar heridas
+      Cuando tenés algún conflicto con otra persona y hace falta sanar heridas
       ¿te animás a dar
     </p>
     <p>el primer paso?</p>
@@ -118,13 +118,13 @@
     <h3>- Los heridos y agobiados (Mt. 11, 28-30)</h3>
     <p>
       <em
-        >«Vengan a mí todos los que están aﬂigidos y agobiados, y yo los
+        >«Vengan a mí todos los que están afligidos y agobiados, y yo los
         aliviaré. Carguen sobre ustedes mi yugo y aprendan de mí, porque soy
         paciente y humilde de corazón, y así encontrarán alivio. Porque mi yugo
         es suave y mi carga liviana».</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       ¡Cuántas veces nuestro orgullo nos impide volver a sentirnos uno con los
       demás! Nos sentmos heridos y tristes. Queremos que los demás se amolden a
@@ -156,18 +156,18 @@
     <h2>ENTENDIÉNDOLOS</h2>
     <p>
       Comúnmente, a esta edad valoran poco el reconciliarse para crecer juntos
-      en el momento de optar ante situaciones conﬂictivas, más aún cuando se
+      en el momento de optar ante situaciones conflictivas, más aún cuando se
       trata de la reconciliación con alguien que “no se ve", como Dios.
     </p>
     <p>
       Normalmente el individualismo y el egoísmo del "sálvese quien pueda" muy
-      propio de la sociedad actual, van generando en ellos conﬂictos y
+      propio de la sociedad actual, van generando en ellos conflictos y
       aislamiento. Por eso necesitan espacios para perdonar y darse las
       oportunidades de cambiar.
     </p>
     <p>
       La relación con los adultos y los familiares suele ser complicada por los
-      límites que se les imponen. Esta relación de “tira y aﬂoje” también
+      límites que se les imponen. Esta relación de “tira y afloje” también
       requiere de momentos de perdón donde haya borrón y cuenta nueva, para
       seguir caminando juntos tomando nuevos recaudos que tomen consideración
       del pasado.
@@ -210,7 +210,7 @@
     <p>Comenzar leyendo el Evangelio del "Hijo pródigo" (Lc 15, 11-17)</p>
     <p>Hacer que los chicos se den vuelta y atarles las manos con un piolín.</p>
     <p>
-      Ayudar a la reﬂexión con un ratito de silencio donde cada uno se
+      Ayudar a la reflexión con un ratito de silencio donde cada uno se
       arrepiente, y si alguien lo desea puede compartir algo a todos.
     </p>
     <p>Continuar leyendo el Evangelio del "Hijo pródigo" (Lc. 15, 18-21)</p>
@@ -280,7 +280,7 @@
       lnvitar a darse un abrazo de paz, cantar entre todos, compartir algo rico
       de merienda
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       El perdón sacramental ofrecido por Cristo es algo muy valioso, es Dios
       mismo quien viene hacia nosotros, nos propone su perdón y lo confirma,
@@ -507,7 +507,7 @@
     <h3>Los heridos y agobiados (Mt. 11, 28-30)</h3>
     <p>
       <em
-        >«Vengan a mí todos los que están aﬂigidos y agobiados, y yo los
+        >«Vengan a mí todos los que están afligidos y agobiados, y yo los
         aliviaré. Carguen sobre ustedes mi yugo y aprendan de mí, porque soy
         paciente y humilde de corzón, y así encontrarán alivio. Porque mi yugo
         es suave y mi carga liviana».</em
@@ -555,7 +555,7 @@
       algo que les haga falta de la mochila.
     </p>
     <p>
-      Mientras tanto hacer silencio y reﬂexionar sobre las malas actitudes de
+      Mientras tanto hacer silencio y reflexionar sobre las malas actitudes de
       cada uno. Se puede
     </p>
     <p>acompañar con unas preguntas individuales o un examen de conciencia.</p>
@@ -568,7 +568,7 @@
     <p>Leer el Evangelio de "Los heridos y agobiados" (Mt. 11, 28-30)</p>
     <p>
       Emprender el camino de regreso, turnándose para llevar la mochila y
-      manteniendo el clima de reﬂexión en preparación a la reconciliación.
+      manteniendo el clima de reflexión en preparación a la reconciliación.
     </p>
     <p>
       Que en el lugar de donde habían salido los esté esperando el sacerdote y
@@ -587,7 +587,7 @@
       nuestros hermanos.
     </p>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1.</li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
       <li><strong>- Palabra de Dios:</strong> Ver actividad N°1.</li>
     </ul>
     <h3>ACTIVIDADES N° 3 – EL PUENTE</h3>
@@ -632,7 +632,7 @@
       Leer el Evangelio de "El que no perdonó a su compañero" (Mt. 18, 23·35)
     </p>
     <p>
-      Que cada uno escriba en una hoja algunas reﬂexiones personales, en base a
+      Que cada uno escriba en una hoja algunas reflexiones personales, en base a
       las siguientes preguntas:¿Tenés en tu corazón rencores o venganzas?
     </p>
     <p>¿Con quién te gustaría reconciliarte?</p>
@@ -644,7 +644,7 @@
       o reestablecer su amistad con alguien en particular.
     </p>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1.</li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
       <li><strong>- Palabra de Dios:</strong> Ver actividad N°1.</li>
     </ul>
     <h3>ACTIVIDADES N° 4 – PERDONÁNDOSE MUTUAMENTE</h3>
@@ -682,7 +682,7 @@
       dar una nueva oportunidad.
     </p>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1.</li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
       <li><strong>- Palabra de Dios:</strong> Ver actividad N°1.</li>
     </ul>
     <h2>EVALUACIÓN</h2>
@@ -694,7 +694,7 @@
       En ronda conversamos con el grupo acerca de cuáles son los principales
       aprendizajes que pueden sacar de lo trabajado durante esta consigna. Les
       pedimos que compartan una situación de sus vidas donde se haya presentado
-      un conﬂicto y luego haya habido una reconciliación o aún no se haya
+      un conflicto y luego haya habido una reconciliación o aún no se haya
       producido.
     </p>
     <h3>- Se reza y se celebra:</h3>
