--- a/src/10-respeto.html
+++ b/src/10-respeto.html
@@ -27,7 +27,7 @@
     <p>“¿Es ahora el momento adecuado para esta consigna?’”</p>
     <h3>- Dinámica:</h3>
     <p>
-      Pensá en las necesidades de tu grupo y reﬂexioná acerca de cómo se tratan
+      Pensá en las necesidades de tu grupo y reflexioná acerca de cómo se tratan
       entre ellos.
     </p>
     <ul>
@@ -93,17 +93,17 @@
         lo que esperamos o por ser más parecidos a nosotros?
       </li>
     </ul>
-    <h3>- Reﬂexión</h3>
+    <h3>- Reflexión</h3>
     <p>
       La idea de educar partiendo desde la premisa del respeto y la diversidad,
       comprende educar a que sean libres, a modificar los malos hábitos y a tener
-      sentido crítico, es decir a reﬂexionar y a analizar aquellas situaciones
+      sentido crítico, es decir a reflexionar y a analizar aquellas situaciones
       en las que se están generando prejuicios o injusticias Por otro lado,
       respetarte a vos mismo significa tener una actitud positiva hacia tu
       derecho de vivir y ser feliz. Es reafirmar tu valor personal, así como tus
       pensamientos, tus deseos y tus ncesidades. Cuando te respetas, sentís que
       tenés derecho innato a la alegría y la satisfacción. También te dejamos
-      una reﬂexión de Don Bosco para que te quedes pensando:
+      una reflexión de Don Bosco para que te quedes pensando:
     </p>
     <p>“Respeto a todos, miedo a ninguno”.</p>
     <p><strong>Juan Don Bosco</strong></p>
@@ -126,7 +126,7 @@
       </li>
     </ul>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
-    <h3>- Reﬂexión: Éxodo 20, 1-17</h3>
+    <h3>- Reflexión: Éxodo 20, 1-17</h3>
     <p><em>Los diez mandamientos</em></p>
     <p><em>«Entonces Dios pronunció estas palabras:</em></p>
     <p>
@@ -230,7 +230,7 @@
     <p>
       morales y el respeto hacia las personas. Lo que sucede es que los
       adolescentes se encuentran en un periodo crítico, lleno de cambios y
-      conﬂictos, pasando por un proceso de integración de la personalidad y la
+      conflictos, pasando por un proceso de integración de la personalidad y la
       existencia, en el que las características de rebeldía y autoafirmación
       propias de la edad hacen tener enfrentamientos fuertes, especialmente con
       las figuras de autoridad. De hecho, este enfrentamiento se percibe
@@ -252,7 +252,7 @@
       espacios o terrtorios propios, defiéndelos a toda costa. Por ejemplo,
       encerrándose en su cuarto, irse y no querer decir a donde van entre otras
       situaciones de retraimiento. Ante estas reacciones es frecuente notarlos
-      rebeldes, necios, conﬂictivos y autoafirmativos.
+      rebeldes, necios, conflictivos y autoafirmativos.
     </p>
     <p>
       Cabe destacar que estas características y situaciones de los adolescentes
@@ -270,7 +270,7 @@
         respeto.
       </li>
       <li>
-        - A su vez reﬂexionaron acerca de la importancia de poder ubicarse
+        - A su vez reflexionaron acerca de la importancia de poder ubicarse
         contextualmente y relacionarse con respeto a los demás.
       </li>
       <li>
@@ -360,7 +360,7 @@
       <li>- ¿Lo aceptas y lo respetás?</li>
       <li>- ¿Lo hacés a un lado o lo ignorás?</li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       El respeto es una actitud hacia uno mismo, hacia los demás, hacia la
       patria (a su pueblo), hacia los símbolos (a quienes representan), hacia la
@@ -553,7 +553,7 @@
       <li>
         • Se puede dar directamente el veredicto a favor de la fiscalía, como
         para ver las reacciones de los chicos y que éstas sean un buen
-        disparador para una reﬂexión final.
+        disparador para una reflexión final.
       </li>
       <li>
         • Que haya otro grupo que haga de jurado: que siga atentamente el juicio
@@ -578,7 +578,7 @@
       especial que cada chico crea que de alguna manera no está respetando como
       se merece.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Existen distintas formas de discriminar, pero por tal motivo, lo mínimo
       que puedo hacerle al otro es respetarlo. Luego, con mucho amor puedo ser
@@ -641,7 +641,7 @@
         el pueblo acudía a él. Entonces se sentó y comenzó a enseñarles.Los
         escribas y los fariseos le trajeron a una mujer que había sido
         sorprendida en adulterio y, poniéndola en medio de todos dijeron a Jesús:
-        “Maestro, esta mujer ha sido sorprendida en ﬂagrante adulterio. Moisés,
+        “Maestro, esta mujer ha sido sorprendida en flagrante adulterio. Moisés,
         en la Ley, nos ordenó apedrear a esta clase de mujeres. Y tú, ¿qué
         dices?”. Decían esto para ponerlo a prueba, a fin de poder acusarlo. Pero
         Jesús, inclinándose, cmenzó a escribir en el suelo con el dedo. Como
@@ -718,7 +718,7 @@
       conversado. Al terminar el juego, dar los resultados finales y premiar al
       ganador.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Hay juegos en los que unos ganan y otros pierden, y eso está bien siempre
       y cuando se respete a los adversarios y se respeten las reglas.
@@ -799,7 +799,7 @@
       A través de una actividad disparadra, en parejas o pequeños grupos,
       deberán armar una pequeña construcción con materiales que pueda
       facilitárseles y representar algún artículo que hayan seleccionado al
-      azar. Reﬂexionamos brevemente sobre lo trabajado.
+      azar. Reflexionamos brevemente sobre lo trabajado.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -1061,7 +1061,7 @@
       <li>- ¿Lo aceptas y lo respetás?</li>
       <li>- ¿Lo hacés a un lado o lo ignorás?</li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>Defensa de los derechos humanos:</p>
     <p>
       Los derechos se refieren a lo que se puede hacer y a las responsabilidades
@@ -1104,7 +1104,7 @@
       recortada y oprimida.
     </p>
     <p>
-      Predicar la resurrección es entrar en conﬂicto. Hoy nadie es encarcelado y
+      Predicar la resurrección es entrar en conflicto. Hoy nadie es encarcelado y
       asesinado por prdicar la resurrección. Es un tema que genera indiferencia
       que no molesta a nadie. En cambio, para los discípulos era una denuncia:
       "ustedes lo han matado, pero Dios lo ha resucitado”
@@ -1113,7 +1113,7 @@
       (Hechos 3, 15). Afecta a quienes lo oyen. Por lo tanto, predicar la
       resurrección es vivir y hablar de tal manera que se da la razón a Jesús y
       se la quita a quienes se comportaron como los que lo asesinaron. Esto sí
-      compromete. Esto resulta conﬂictivo. Quiere decir: Jesús fue perseguido y
+      compromete. Esto resulta conflictivo. Quiere decir: Jesús fue perseguido y
       asesinado por defender la causa del hombre, los derechos de los pobres y
       marginados.
     </p>
@@ -1146,14 +1146,14 @@
     <p>El respeto entre los Rastreadores/Hogueras se manifiesta…</p>
     <p>Por eso, creo que necesito seguir trabajando con ellos en…</p>
     <p>Y yo personalmente, en cuanto a esta consigna tengo que trabajar en…</p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>La virgen de Guadalupe</strong> La virgen de Guadalupe, estrella
       de la mañana, ojos negros, piel morena, mi virgencita americana.
       Protectora de los pobres, crisol de todas las razas, transformaste a
       nuestra tierra, en continente de esperanza. Juan Diego nos explica, cómo
       pudo pasar; la Reina de los cielos, lo vino a visitar. Está llorando el
-      indio, el rosal ﬂoreció, Dios le ha dado una madre de su mismo color. Ya
+      indio, el rosal floreció, Dios le ha dado una madre de su mismo color. Ya
       no son enemigos, indio con español a través de su gracia, la Virgen los
       unió. Y a través de los siglos, aún perdura esa fe, de América que grita
       que quiere renacer.
