--- a/src/11-verdad.html
+++ b/src/11-verdad.html
@@ -64,7 +64,7 @@
         juntos muchas cosas buenas, muchas obras de caridad.</em
       >
     </p>
-    <h3>- Reﬂexión</h3>
+    <h3>- Reflexión</h3>
     <p>
       ¿Qué características tendría la Verdad según el Papa Francisco? Ante todo,
       no existe una vedad única, hay que captar lo positivo del otro. No hay que
@@ -81,7 +81,7 @@
         conocerán la verdad y la verdad los hará libres”.»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       La mentira se vuelve pesada, incómoda. La hipocresía pesa y oprime. El
       engaño permite que se sostenga la injusticia. Cuando uno dice una verdad,
@@ -122,7 +122,7 @@
     <h3>ACTIVIDAD N° 1: RADIOGRAFÍA DEL GRUPO</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad busca que el Rastreador-Hoguera reﬂexione la importancia de
+      Esta actividad busca que el Rastreador-Hoguera reflexione la importancia de
       optar por la verdad. Verdad que también se traduce en ser sincero con
       uno mismo.
     </p>
@@ -224,7 +224,7 @@
         y poder decírselo a la persona afectada.
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Mi verdad no es absoluta:</strong> "Mi verdad" sobre lo que pasa
       en el grupo no es absoluta, sino que por el contrario es sólo una parte de
@@ -264,7 +264,7 @@
     <p>
       <strong>Optar por la verdad:</strong> Decir la verdad es una forma de
       amar, dejamos de ser egoístas y comezamos a pensar en el otro. La
-      sinceridad consiste simplemente en reﬂejar la realidad de lo que pasa, sin
+      sinceridad consiste simplemente en reflejar la realidad de lo que pasa, sin
       alterarla ni interferirla con otras cosas.
     </p>
     <p>
@@ -294,7 +294,7 @@
     <h3>ACTIVIDAD 2: TELÉFONO DESCOMPUESTO</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad busca que el Rastreador-Hoguera reﬂexione sobre la
+      Esta actividad busca que el Rastreador-Hoguera reflexione sobre la
       importancia de no distosionar la verdad, ya que la verdad no solo es parte
       de la promesa exploradoril, es parte del mensaje cristiano.
     </p>
@@ -341,10 +341,10 @@
         antes.
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>No distorsionar la verdad:</strong> Muchas veces no todo lo que se
-      dice es verdad, sino que puede ser sólo su pálido reﬂejo (¡a veces por
+      dice es verdad, sino que puede ser sólo su pálido reflejo (¡a veces por
       desconocimiento!). Si no estamos atentos podemos colaborar aún más a
       distorsionarla y que se aleje de lo que es realmente.
     </p>
@@ -571,7 +571,7 @@
       Jaime no murió, continúa vivo en nuestro corazón, en nuestras palabras y
       en nuestros actos.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Anunciar la verdad:</strong> El hombre, por su dignidad se ser
       humano, busca naturalmente la vedad. Necesita honrarla y anunciarla a los
@@ -580,7 +580,7 @@
       a situaciones injustas, corrigiendo a un amigo, contándole a otro las
       cosas que uno va descubriendo, etc. La palabra tiene la ventaja de la
       rapidez, de la facilidad de explicar cosas complicadas, de permitir un
-      diálogo más ﬂuido. Unas pocas palabras bien ubicadas pueden ser muy
+      diálogo más fluido. Unas pocas palabras bien ubicadas pueden ser muy
       fuertes.
     </p>
     <p>
@@ -657,7 +657,7 @@
       está hablando si hoy escuchar hondo en tu alma, un camino te está
       esperando
     </p>
-    <h3>- Se reﬂexiona:</h3>
+    <h3>- Se reflexiona:</h3>
     <ol>
       <li>
         1. Al finalizar cada uno puede releerla, y marcar la frase que más le
