--- a/src/12-fe.html
+++ b/src/12-fe.html
@@ -73,8 +73,8 @@
       </li>
       <li>2) Compartir con sus pares animadores estos recuerdos.</li>
       <li>
-        3) Realizar un autoexamen y detección de los propios conﬂictos de fe en
-        la actualidad. ¿Qué significa para vos la fe y en qué cosas se reﬂeja en
+        3) Realizar un autoexamen y detección de los propios conflictos de fe en
+        la actualidad. ¿Qué significa para vos la fe y en qué cosas se refleja en
         tu vida? ¿Qué significa hoy, para vos, ser como explorador una persona de
         fe? ¿Qué prioridad tiene la fe en tu vida?
       </li>
@@ -92,7 +92,7 @@
       <em
         >«Y la Palabra se hizo carne y habitó entre nosotros. Y nosotros hemos
         visto su gloria, la gloria que recibe del Padre como Hijo único, lleno de
-        gracia y de verdad.» Reﬂexión: Nuestro Dios, en Jesús, se hizo humano.
+        gracia y de verdad.» Reflexión: Nuestro Dios, en Jesús, se hizo humano.
         Tenemos un Dios que sale al encuentro de la historia de la humanidad y
         se queda con nosotros. Nuestra fe se basa en el encuentro con Jesús.
         Este encuentro nos cambia la vida, nos sana, nos renueva, nos alienta a
@@ -179,7 +179,7 @@
     <p>¿En qué cosas lo descubrimos?</p>
     <p>¿Cómo expresamos la fe en el grupo?</p>
     <p>¿Cómo la celebramos y la comunicamos a otros?</p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       En Ia Palabra de Dios descubrimos la acción creadora llena de bondad de
       Dios Padre al cminar por esta tierra de Jesús, salvador de la humanidad y
@@ -296,7 +296,7 @@
       ¿Cómo es Dios? No lo sabemos, pero descubrimos su imagen a través de las
       personas, que son creadas "a su imagen y semejanza". La presencia de Dios
       en cada persona nos hace sponer que todo el amor que descubramos en ella
-      es un reﬂejo del amor de Dios. Podemos ir desde un Dios poderoso como rey,
+      es un reflejo del amor de Dios. Podemos ir desde un Dios poderoso como rey,
       justo como un juez, un Dios "Papá" como le llamaba Jesús escandalizando a
       los judíos de su época que lo sentían mucho más lejano.
     </p>
@@ -457,7 +457,7 @@
     <p>
       Por eso, las expresiones artísticas de cada época acompañan estos procesos
       y recorriendo las obras de arte podemos tener una visión sobre cómo era la
-      fe en cada sociedad. Inﬂuencidos fuertemente por cada cultura, los hombres
+      fe en cada sociedad. Influencidos fuertemente por cada cultura, los hombres
       seguimos buscando las imágenes de Dios que mejor expresen la experiencia
       de fe de nuestra vida.
     </p>
@@ -550,7 +550,7 @@
     <p>¿Cómo expresamos la fe en el grupo?</p>
     <p>¿Cómo la celebramos y la comunicamos a otros?</p>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1.</li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
       <li>
         <strong>- Palabra de Dios:</strong> Ver actividad N°1 <strong>.</strong>
       </li>
@@ -583,7 +583,7 @@
     <p>¿En qué hechos estuvo presente Dios?</p>
     <p>¿Qué lugar ocupa Dios en mi vida?</p>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1.</li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
       <li><strong>- Palabra de Dios:</strong> Ver actividad N°1.</li>
     </ul>
     <h3>ACTIVIDAD N° 4- IMÁGENES DE DIOS</h3>
@@ -624,7 +624,7 @@
       imagen de Dios en base a lo conversado.
     </p>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1.</li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
       <li><strong>- Palabra de Dios:</strong> Ver actividad N°1.</li>
     </ul>
     <h3>ACTIVIDAD N° 5-EL ESPÍRITU SANTO EN LA VIDA DE TODOS LOS DÍAS</h3>
@@ -655,7 +655,7 @@
       los demás nuestra fe?
     </p>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1.</li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
       <li><strong>- Palabra de Dios:</strong> Ver actividad N°1.</li>
     </ul>
     <h2>EVALUACIÓN</h2>
@@ -675,65 +675,65 @@
         vocaciones para toda la vida. Para consolidar la mirada de una fe
         cotidiana, pero con perspectiva trascendente, invitamos al grupo a leer
         el siguiente relato acerca del “Reino de Dios”. El reino de Dios es como
-        un hombre que alrededor de su casa tiene un jardín lleno de ﬂores de
-        todos los colores. Nuestro mundo es como ese gran jardín lleno de ﬂores,
+        un hombre que alrededor de su casa tiene un jardín lleno de flores de
+        todos los colores. Nuestro mundo es como ese gran jardín lleno de flores,
         donde nos sembró un Dios jardinero muy bueno que nos quiere mucho. Él
         nos permite crecer libremente. Nos riega con bendiciones y nos deja
         algunos gusanitos que si bien a primera vista molestan con el tiempo se
         convierten en mariposas, como todos aquellos problemas que transformamos
-        en desafíos. Somos ﬂores muy diferentes, las hay de todos de todos los
+        en desafíos. Somos flores muy diferentes, las hay de todos de todos los
         colores, tamaños, formas y perfumes, pero todos pasamos por los mismos
         inviernos y primaveras y convivimos bajo el mismo
       </li>
     </ul>
     <p>sol y la misma lluvia.</p>
     <p>
-      Más aún, todos podemos ﬂorecer y así contagiar alegría y regalar nuestro
+      Más aún, todos podemos florecer y así contagiar alegría y regalar nuestro
       perfume. Un pefume de servicio y solidaridad, un perfume de entrega con
       amor, un perfume que se extiende por todo el jardín e impregna el
       ambiente. Esa es nuestra misión en el jardín de la vida.
     </p>
     <p>
-      Una mañana estaba caminando por el jardín cuando de pronto vio una ﬂor que
+      Una mañana estaba caminando por el jardín cuando de pronto vio una flor que
       asomaba entre un matorral. Se acercó, la observó lentamente, olió su
       perfume, estiró su mano y suavemente la cortó.
     </p>
     <p>
-      El jardinero camina y mira a cada ﬂor y con una sensibilidad muy especial
+      El jardinero camina y mira a cada flor y con una sensibilidad muy especial
       se acerca y percibe su perfume. Así se da cuenta cuando cada una de las
-      ﬂores está a punto, está lista.
+      flores está a punto, está lista.
     </p>
     <p>
-      Cada ﬂor tiene su hora y su tiempo que sólo el jardinero conoce. Cada
+      Cada flor tiene su hora y su tiempo que sólo el jardinero conoce. Cada
       persona tiene su vida y su muerte enteramente en manos de Dios. Que con el
       tiempo no perdamos nuestra fe y nuestra esperanza
     </p>
     <p>
-      ¡Que no esté marchite nuestra ﬂor cuando el jardinero venga a buscarnos!
+      ¡Que no esté marchite nuestra flor cuando el jardinero venga a buscarnos!
       ¡Estemos “siempre listos” para que nos llame!
     </p>
     <p>
-      Al cortarla, esa ﬂor pareciera muerta, muerta al jardín que ya no la tiene
-      entre los suyos. Las otras ﬂores sienten el vacío. Pero su fuerte perfume
-      queda en el jardín, sigue ﬂotando en el ambiente. Es que nuestros seres
+      Al cortarla, esa flor pareciera muerta, muerta al jardín que ya no la tiene
+      entre los suyos. Las otras flores sienten el vacío. Pero su fuerte perfume
+      queda en el jardín, sigue flotando en el ambiente. Es que nuestros seres
       queridos trascienden el débil hilo que separa la vida de la muerte. Sus
       historias se transforman en presente en cada uno de nosotros. Su memoria
       nos acompaña y nos acompañará por siempre.
     </p>
     <p>
-      Entonces volvió a su casa con la ﬂor en sus manos y lo puso en un lugar
-      especial de su casa, junto con muchas otras ﬂores.
+      Entonces volvió a su casa con la flor en sus manos y lo puso en un lugar
+      especial de su casa, junto con muchas otras flores.
     </p>
     <p>
-      El jardinero llevó, con ternura y delicadeza, la ﬂor en sus propias manos.
-      Se la llevó a su prpia casa, casa grande que Dios tiene preparada. La ﬂor
+      El jardinero llevó, con ternura y delicadeza, la flor en sus propias manos.
+      Se la llevó a su prpia casa, casa grande que Dios tiene preparada. La flor
       no está muerta. Allí lo espera otra vida, una nueva vida en un lugar
-      especial donde las ﬂores nunca se marchitan, sino que siguen perfumando
-      eternamente. Las otras ﬂores no podemos verlo, pero estamos seguros que
+      especial donde las flores nunca se marchitan, sino que siguen perfumando
+      eternamente. Las otras flores no podemos verlo, pero estamos seguros que
       allí está. Tenemos una fe ciega en nuestro fiel jardinero.
     </p>
     <p>
-      Está junto con otras tantas ﬂores. Junto con las ﬂores de todos aquellos
+      Está junto con otras tantas flores. Junto con las flores de todos aquellos
       cuyo perfume hoy seguimos percibiendo en este jardín.
     </p>
     <p>
