--- a/src/13-conciencia.html
+++ b/src/13-conciencia.html
@@ -61,7 +61,7 @@
       pibes vivan y sientan suyo este espíritu, el cual busca que todos dejemos
       a un lado nuestros intereses en post y acción de visualizar las
       necesidades del otro. Por lo tanto, será un lindo desafío transmitirles
-      estas reﬂexiones a nuestros chicos desde nuestro ejemplo y desde ex-
+      estas reflexiones a nuestros chicos desde nuestro ejemplo y desde ex-
       periencias concretas.
     </p>
     <h2>TU MOMENTO</h2>
@@ -77,10 +77,10 @@
       ideológicos similares? <strong>»</strong> ¿Te preocupas por conocer,
       opinar y tomar posición sobre los temas de actualidad?
     </p>
-    <h3>- Reﬂexión</h3>
+    <h3>- Reflexión</h3>
     <p>
       Una vez que hayas respondido a estas preguntas te pedimos que vayas un
-      poquito más allá y reﬂexiones acerca de esta frase: “Lee todos los días.
+      poquito más allá y reflexiones acerca de esta frase: “Lee todos los días.
       Lee todo lo que puedas. No solo leas las cosas que ya sabes. Lee sobre
       gente. Lee a la gente.”
     </p>
@@ -133,7 +133,7 @@
         su pobreza, ha dado todo lo que tenía para vivir”.»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <ul>
       <li>- ¿Qué te hace pensar esta lectura?</li>
       <li>- ¿A qué nos convoca?</li>
@@ -176,7 +176,7 @@
       operaciones formles, lo que implica que ya son capaces de formular y
       comprobar hipótesis, estableciendo crítcas sobre los valores familiares y
       sociales que les permiten evaluar lo que consideran bueno o malo, pudiendo
-      percibir los conﬂictos que provienen de sus diferentes roles (hijo, amigo,
+      percibir los conflictos que provienen de sus diferentes roles (hijo, amigo,
       estudiante, ciudadanos de una sociedad, comunidad etc.) Así pues, el logro
       de la autonomía y la formación de la identidad se convierten en los
       procesos fundamentales de esta etapa. Aunque pareciera no ser así, las
@@ -215,7 +215,7 @@
         en Dios… Pero luego llegaron los malos tiempos. Había “algo” que
         afectaba a todos y hacia que nadie se acercara a la comunidad. ¿Qué
         comunidad?, si ya quedaban unos pocos, los que se ocupaban de poner las
-        velas y las ﬂores para un culto cada vez más cerrado. El cura se sentía
+        velas y las flores para un culto cada vez más cerrado. El cura se sentía
         mal, como que todo perdía sentido. Tenía una pregunta que le daba
         vueltas en la cabeza desde hacía tiempo y que tomando fuerzas se la dijo
         al maestro:</em
@@ -353,7 +353,7 @@
       entender los resutados y para mostrarlos a los demás, de manera que todos
       puedan conocer las conclusiones y principales resultados.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Signos de muerte en la realidad actual:</strong> Miles de personas
       hoy están reclamando el derecho a vivir dignamente y no los dejan. Hoy se
@@ -531,7 +531,7 @@
       ¿Por dónde comenzaría? Redactar en forma de noticias las posibles acciones
       de Don Bosco en la actualidad y armar con ellas un diario mural o revista.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Signos de muerte en la realidad actual:</strong> Miles de personas
       hoy están reclamando el derecho a vivir dignamente y no los dejan. Hoy se
@@ -573,7 +573,7 @@
       Esta actividad busca que los Rastreadores/Hogueras piensen en alguna
       persona cercana que este necesitando de ayuda, y que ellos tomen el
       propósito concreto de brindarles algún tipo de ayuda, la cual deberá ser
-      verdadera y bajo una reﬂexión previa.
+      verdadera y bajo una reflexión previa.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -688,7 +688,7 @@
       y neficencia no bastaba; era preciso luchar por eso no está bien: cuando
       hay personas (y mula justicia social, por instituciones y leyes que
       chas) que no tienen para lo más mínimo, los garantizaran los derechos
-      humanos. gastos superﬂuos no están de acuerdo con el Esta opción tiene dos
+      humanos. gastos superfluos no están de acuerdo con el Esta opción tiene dos
       momentos que no proyecto de Dios. Hay que preguntarse si es pueden ser
       desatendidos ni ser vistos como algo realmente necesario o es simplemente
       excluyentes. Por un lado la asistencia a los para satisfacer un deseo
@@ -696,7 +696,7 @@
     </p>
     <p>
       Las diferencias entre lo necesario y lo suque ellos no pueden esperar y
-      por otro la prperﬂuo son difíciles de precisar y es fruto de moción humana
+      por otro la prperfluo son difíciles de precisar y es fruto de moción humana
       que conduce a descubrir los un largo proceso de maduración y de sensi-
       mecanismos que generan estas situaciones e
     </p>
@@ -725,7 +725,7 @@
     </p>
     <ul>
       <li>
-        <strong>- Reﬂexión: Distribución de bienes:</strong> Existen políticas
+        <strong>- Reflexión: Distribución de bienes:</strong> Existen políticas
         globales de dominación que cada vez marginan más a nuestros pueblos, y
         permiten que una minoría acumule la riqueza y no la distribuya. Esto es
         antievangélico, atenta contra Dios, contra el derecho de los pueblos. En
@@ -734,7 +734,7 @@
         algunos, muchos otros no alcanza a cubrir sus "necesidades". Si el
         sistema económico sigue basándose en la obsesión por consumir y
         consumir, no queda espacio para compartir y ser solidario. Debemos ser
-        conscientes de los mecanismos de la ideología capitalista, su inﬂuencia
+        conscientes de los mecanismos de la ideología capitalista, su influencia
         en la vida y discernirla desde el Evangelio de Jesucristo que propone el
         Reino de Dios sin excluidos, donde los bienes se distribuyen según las
         necesidades y todos pueden vivir en dignidad.
