--- a/src/15-identidad.html
+++ b/src/15-identidad.html
@@ -75,7 +75,7 @@
     <h3>- Dinámica</h3>
     <p>
       Será cuestión de retrotraernos a la etapa por la cual están atravesando
-      nuestros Rastreadores Hogueras y reﬂexionar cómo sobrellevamos nosotros
+      nuestros Rastreadores Hogueras y reflexionar cómo sobrellevamos nosotros
       nuestra búsqueda de identidad, que obstáculos se nos presentaron, cómo los
       superamos, y que orientaciones podemos brindarles a nuestros chicos para
       ayudarlos a que puedan vivir esta etapa con alegría.
@@ -104,7 +104,7 @@
       ¿Cómo son nuestros gestos, actitudes, vestimenta, chistes y comentarios al
       respecto?
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>...De los miedos nacen los corajes;</strong> y de las dudas, las
       certezas. Los sueños anuncian otra realidad posible y los delirios, otra
@@ -120,7 +120,7 @@
     <h2>ALGUNAS COSAS CLARAS</h2>
     <ul>
       <li>
-        - Como animador deberás considerar que tu reﬂexión sobre tu propia
+        - Como animador deberás considerar que tu reflexión sobre tu propia
         identidad tendrá un gran valor a la hora de trabajar estos temas tan
         controversiales con tus chicos, ya que primero tendrás que haberte
         movilizado vos, para luego generar una verdadera movilización en ellos.
@@ -155,7 +155,7 @@
         hombre.»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Jesús fue a Jerusalén y levantó entusiasmos, pero no se fiaba de todos,
       porque los conocía a todos y sabía lo que hay dentro de cada uno. El
@@ -202,7 +202,7 @@
     <p>
       <strong>Crisis-dificultad, crisis</strong> provocada por los grandes
       cambios, cualitativos y cuantitativos, que se operan en todos los órdenes
-      de la persona (físico, psicológico, cognitivo) y que generan conﬂictos o
+      de la persona (físico, psicológico, cognitivo) y que generan conflictos o
       dificultades. Sobre todo "crisis de identidad", ya que se dan tales
       transformaciones que el individuo tiene que reconstruir su propia
       identidad, autoimagen y autoestima.
@@ -221,7 +221,7 @@
     </p>
     <h2>OBJETIVOS CUMPLIDOS:</h2>
     <p>
-      Los Rastreadores / Hogueras reﬂexionaron sobre que el desarrollo de una
+      Los Rastreadores / Hogueras reflexionaron sobre que el desarrollo de una
       personalidad mdura requiere una identificación sexual constituida,
       integrada y aceptada, con dos caminos posibles: ser varones o mujeres, y
       que integrar la sexualidad conforma una parte fundamental de la identidad
@@ -292,7 +292,7 @@
       <strong>El lance del viejo Mora:</strong> Manuel Mora, quien estaba
       conviviendo con la madre de Laura, va encontrando atractiva a Laura, la
       mira insistentemente a Laura y no le ahorra cumplidos, la cree fácil e
-      ingenua. No es una presa difícil y aﬂojará al primer asalto. A pesar del
+      ingenua. No es una presa difícil y aflojará al primer asalto. A pesar del
       poderío del hombre, la niña logra mantenerse firme y liberarse. Laura ha
       tenido el valor de hacerle frente a él, ¡el dueño y señor del
       establecimiento! Pero la ira de Mora no se ha apagado. En su brutalidad
@@ -329,7 +329,7 @@
       Guardar todas las frases en una cajita todas juntas. No hace falta
       ponerles nombre.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>La sexualidad:</strong> La sexualidad no es algo accidental, “poco
       importante”, o cómo piensan o dicen algunos "algo feo, sucio, bajo y
@@ -365,7 +365,7 @@
     <ul>
       <li>• Aceptar tener cuerpo de varón o de mujer.</li>
       <li>
-        • Aceptar el propio cuerpo, así como está conformado: ﬂaco, gordo,
+        • Aceptar el propio cuerpo, así como está conformado: flaco, gordo,
         rubio, etc.
       </li>
       <li>
@@ -427,7 +427,7 @@
       humano el sexo toma un significado más pleno que el de una placentera
       "trampa" para asegurar la supervivencia de la especie. Los animales
       cumplen instintivamente con su ciclo vital, pero no el hombre, porque Dios
-      lo creó libre para que pueda reﬂexionar sobre el "mandato" de la
+      lo creó libre para que pueda reflexionar sobre el "mandato" de la
       naturaleza y elegir el momento, la situación, la persona y no limitar ni
       desvlorar el sexo en una relación ocasional y superficial, sino enmarcarlo
       en una relación profunda y comprometida.Además, el sexo no es una
@@ -493,7 +493,7 @@
       su ser varón o mujer y la escribe en un papelito.
     </p>
     <p>Guardar todos los papelitos juntos en una caja.</p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>La sexualidad:</strong> La sexualidad no es algo accidental, “poco
       importante”, o cómo piensan o dicen algunos "algo feo, sucio, bajo y
@@ -526,7 +526,7 @@
     <ul>
       <li>• Aceptar tener cuerpo de varón o de mujer.</li>
       <li>
-        • Aceptar el propio cuerpo así como está conformado: ﬂaco, gordo, rubio,
+        • Aceptar el propio cuerpo así como está conformado: flaco, gordo, rubio,
         etc.
       </li>
       <li>
@@ -598,7 +598,7 @@
       En el ser humano el sexo toma un significado más pleno que el de una
       placentera "trampa" para asegurar la supervivencia de la especie. Los
       animales cumplen instintivamente con su ciclo vital, pero no el hombre,
-      porque Dios lo creó libre para que pueda reﬂexionar sobre el "mandato" de
+      porque Dios lo creó libre para que pueda reflexionar sobre el "mandato" de
       la naturaleza y elegir el momento, la situación, la persona y no limitar
       ni desvlorar el sexo en una relación ocasional y superficial, sino
       enmarcarlo en una relación profunda y
@@ -672,7 +672,7 @@
         más completo? Luego poner en común las conclusiones que hayan surgido.
       </li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Identidad varón-mujer:</strong> El siguiente cuadro compara las
       características extremas de ambos sexos.
@@ -763,7 +763,7 @@
     <p>El cuerpo, regalo de Dios:</p>
     <p>
       La sexualidad es una fuerza que abarca todos los aspectos de la persona e
-      inﬂuye en todo lo que somos y hacemos en todos los momentos de la vida. Es
+      influye en todo lo que somos y hacemos en todos los momentos de la vida. Es
       un regalo de Dios:
     </p>
     <p>
@@ -835,7 +835,7 @@
     <p>
       Aunque por la fuerza de la fe pudiera mover al Lanín o al Aconcagua con
       solo darle una orden, si no pongo mi corazón en Él, soy tan frágil y tan
-      débil como una de esas ﬂores de panadero que hay en el parque. Si no hago
+      débil como una de esas flores de panadero que hay en el parque. Si no hago
       el esfuerzo de encontrarlo en todas las cosas, la realidad me hace pelota
       como puede destrozarte un periodista irresponsable con un micrófono en la
       mano.
