--- a/src/16-obediencia.html
+++ b/src/16-obediencia.html
@@ -126,7 +126,7 @@
       >
     </p>
     <p><em>entonces reinará en el Oratorio la paz y la antigua alegría”</em></p>
-    <h3>- Reﬂexión</h3>
+    <h3>- Reflexión</h3>
     <ul>
       <li>
         - ¿Cuál es el sentido que Don Bosco le otorga a la obediencia y la
@@ -182,7 +182,7 @@
         Ustedes serán felices si, sabiendo estas cosas, las practican”.»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       ¿Qué índica Jesús cuando se posiciona como “ejemplo”? ¿Cuál es su
       invitación para sus discpulos? Frente a la dicotomía autoridad-obediencia,
@@ -340,7 +340,7 @@
       su coversación debe ser discreta y silenciosa para no molestar a su señor.
       No puede participar en ninguna actividad por decisión propia.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Autoridad y obediencia:</strong> La relación autoridad-obediencia
       se basa en que sea racional, con sentido, con fundamentos que se
@@ -398,7 +398,7 @@
     <h3>ACTIVIDAD N° 2: DIALOGO FAMILIAR</h3>
     <h3>- Orientación:</h3>
     <p>
-      La actividad busca que el Rastreador-Hoguera reﬂexione sobre sus propias
+      La actividad busca que el Rastreador-Hoguera reflexione sobre sus propias
       relaciones familiares y las dificultades que conlleva la
       autoridad-obediencia en dicho ambiente.
     </p>
@@ -481,7 +481,7 @@
       ¿Qué cosas nos separan? ¿Y cuáles nos unen? ¿Cómo le demostramos y nos
       demuestran el cariño que nos une?
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Crisis de amor:</strong> Existe una crisis de obediencia, hay hijos
       que les cuesta obedecer, prefieren cortarse solos y hacer la suya, sin
@@ -556,7 +556,7 @@
     <p>Con ella descubrí que la Obediencia-Autoridad</p>
     <p>La Obediencia-Autoridad entre los Rastreadores / Hogueras es…</p>
     <p>Por eso, creo que necesito seguir trabajando con ellos en…</p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Te proponemos que leas la siguiente cita del Pedagogo Paulo Freire: “Solo
       educadores autoritarios niegan la solidaridad entre el acto de educar y el
