--- a/src/17-solidaridad.html
+++ b/src/17-solidaridad.html
@@ -86,13 +86,13 @@
       <li>- Estudio -Amistades</li>
       <li>
         Trabajo- Batallón ¿Fueron estas acciones de manera desinteresada? ¿Hay
-        algún área más ﬂoja que otra? ¿Por qué crees que sucede esto?
+        algún área más floja que otra? ¿Por qué crees que sucede esto?
       </li>
     </ul>
-    <h3>- Reﬂexión</h3>
+    <h3>- Reflexión</h3>
     <p>
       Luego que contestes las preguntas anteriores, te vamos a pedir que leas y
-      reﬂexiones sobre el siguiente texto:
+      reflexiones sobre el siguiente texto:
     </p>
     <p><strong>Un pedacito de cielo lo arregla todo</strong></p>
     <p>“Un día fue a visitar al Padre Cottolengo el Padre Juan Bosco.</p>
@@ -147,7 +147,7 @@
         las obras, te demostraré mi fe”.»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       ¿Cuáles son las “necesidades” de las que habla esta Palabra? ¿Cómo crees
       que se relacionan Fe y Obras? Nuestra misión, lo que tiene que definir
@@ -168,7 +168,7 @@
     <p>
       La solidaridad muchas veces se encuentra entre pares del mismo grupo de
       amigos o de refrencia (como ampliación del compañerismo), con cierta
-      aislación en los propios conﬂictos de este grupo y una despreocupación por
+      aislación en los propios conflictos de este grupo y una despreocupación por
       los demás.
     </p>
     <h2>OBJETIVOS CUMPLIDOS:</h2>
@@ -182,7 +182,7 @@
         asistencialismo sino por la promisión integral de la persona.
       </li>
       <li>
-        -Reﬂexionaron sobre la actitud solidaria frente a las necesidades que
+        -Reflexionaron sobre la actitud solidaria frente a las necesidades que
         hay a su alrededor mediante una acción concreta y oración eficaz.
       </li>
     </ul>
@@ -253,7 +253,7 @@
         institución solidaria para que la distribuyan de manera más anónima.
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Individualismo:</strong> Vivimos en una sociedad en la cual se nos
       inculca permanentemente la idea del "sálvese quien pueda y como pueda". El
@@ -340,7 +340,7 @@
         ejemplos en la propia vida cotidiana de los exploradores.
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Los talentos como regalo:</strong> Dios nos dio "talentos" para
       que no los ignoremos sino para que los aprovechemos por el bien común. No
@@ -414,7 +414,7 @@
         una buena acción comunitaria como grupo.
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Motivaciones para ser solidario:</strong> Tener en cuenta las
       motivaciones de nuestros actos, si es por nuestro prójimo o porque nos
@@ -455,7 +455,7 @@
       Te proponemos comenzar escuchando o cantando la canción "El Imbécil" (León
       Gieco)
     </p>
-    <h3>- Se reﬂexiona:</h3>
+    <h3>- Se reflexiona:</h3>
     <p>
       Comentar las frases que le parezcan más importantes a cada uno. Detectar
       los talentos o bienes y las carencias que aparecen. ¿Qué cosas parecidas
@@ -484,7 +484,7 @@
     <p>Con ella descubrí que la Solidaridad…</p>
     <p>La Solidaridad entre los Rastreadores / Hogueras es…</p>
     <p>Por eso, creo que necesito seguir trabajando con ellos en…</p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>Te proponemos leer lo siguiente:</p>
     <p>
       <em
