--- a/src/19-testimonio.html
+++ b/src/19-testimonio.html
@@ -93,7 +93,7 @@
       requiere que los
     </p>
     <p>
-      Rastreadores / Hogueras hayan reﬂexionado sobre algunos valores, lo cual
+      Rastreadores / Hogueras hayan reflexionado sobre algunos valores, lo cual
       hará más enriquecedor el trabajo grupal y los aspectos que se puedan
       llegar a discutir.
     </p>
@@ -275,7 +275,7 @@
       >
     </p>
     <p><em>ño de mis hermanos, lo hicieron conmigo.”»</em></p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Jesús se pone a trabajar por los demás y da el ejemplo haciéndose servidor
       de su pueblo hasta entregarse en la cruz por nosotros. ¿Qué nos pide
@@ -294,7 +294,7 @@
     </p>
     <h2>ENTENDIÉNDOLOS</h2>
     <p>
-      Es común que en esta edad los adolescentes encuentren un conﬂicto
+      Es común que en esta edad los adolescentes encuentren un conflicto
       particular en relación a la coherencia. Suelen ser exigentes a la hora de
       demandar esta virtud, pero les cuesta sotenerla en su vida personal. A
       veces, la falta de modelos de vida y el individualismo los llevan a
@@ -305,7 +305,7 @@
       este sentido el secundario es la puerta a un nuevo mundo donde la
       apriencia y el aspecto físico se vuelve importante para ellos. No logran
       una coherencia entre lo que dicen y exigen a los demás, con lo que hacen
-      en su propia vida. Otro punto de conﬂicto se sitúa en los primeros roces
+      en su propia vida. Otro punto de conflicto se sitúa en los primeros roces
       fuertes que comienzan a aparecer en su núcleo familiar, expresado la
       rebeldía propia de la edad. A veces pueden sentir que sólo pueden ser
       “ellos mismos” en el Batallón, ya que dentro de sus casas o entre sus
@@ -370,7 +370,7 @@
       <li>- ¿Se ayudaron o cada uno siguió sin darle mucha importancia?</li>
       <li>- ¿La ayuda fue por su cuenta o porque se los dijeron?</li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>Plantear relacionando con lo conversado al principio del Día:</p>
     <p>¿Quién actúa con prudencia y es coherente?</p>
     <p>
@@ -455,7 +455,7 @@
     <p>¿Qué acción provoca la levadura en la harina?</p>
     <p>¿Cual es el aporte del agua?</p>
     <p>¿Cómo es nuestro testimonio en la vida cotidiana?</p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       En la Palabra de Dios que trabajamos “la harina” representa la realidad
       que nos rodea. “La levadura” es el Espíritu Santo que nos lleva a dar
@@ -520,7 +520,7 @@
         testimonio en una situación difícil.
       </li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Dios es el protagonista que desea la vida y la felicidad del hombre y
       realiza esta voluntad de muchas modos diferentes. El hombre es invitado a
@@ -601,7 +601,7 @@
         Testigos de amor y de esperanza
       </li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Jesús nos pide que comprendamos las cosas grandes y pequeñas del hombre
       concreto y de la sociedad. Que busquemos con imaginación creadora nuevos
@@ -722,7 +722,7 @@
       entienda tu voluntad, un corazón sencillo como el mate. Señor que mí
       corazón esté siempre vacío, siempre con ganas de aprender, corazón de
       calabaza que sabe y conoce su pobreza, corazón de gente que acompaña.
-      Señor, hazme de esas personas que cuestionan que no aﬂojan en el camino,
+      Señor, hazme de esas personas que cuestionan que no aflojan en el camino,
       que reza con insistencia y confianza en Vos y que pueda comprometerme con
       la realidad del otro. Hazme, más que anunciador, testigo. Así como el mate
       que acompaña la historia de nuestro pueblo... Amén
