--- a/src/20-corresponsabilidad.html
+++ b/src/20-corresponsabilidad.html
@@ -79,7 +79,7 @@
       pienses como se puede relacionar con la Corresponsabilidad, ¿Cuál sería tu
       respuesta a los interrogantes que plantea el historietista?
     </p>
-    <h3>- Reﬂexión</h3>
+    <h3>- Reflexión</h3>
     <p>
       Sabemos que como animadores debemos estar en constante camino de
       perfeccionamiento.
@@ -149,7 +149,7 @@
         aun lo que tiene.»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Una participación responsable y efectiva de acción comunitaria requiere
       que cada uno de nosotros ponga lo mejor de sí, sus dones, al servicio de
@@ -197,7 +197,7 @@
     <h3>ACTIVIDAD N° 1: DONES</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad busca reﬂexionar sobre la diversidad de dones que posee
+      Esta actividad busca reflexionar sobre la diversidad de dones que posee
       cada uno del grupo, diferencias que nos hace complementarnos en una gran
       comunidad.
     </p>
@@ -268,7 +268,7 @@
         grupo? ¿Qué cosas concretas ayudan al bien común del grupo?
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Diversidad de dones:</strong> Todos tenemos diversos dones, los
       hayamos descubierto o no y que son regalos de Dios. Son capacidades que
@@ -381,7 +381,7 @@
         que ese miembro simboliza para cada uno.
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       La corresponsabilidad: Es la capacidad de los integrantes de un grupo de
       responder al llamdo diciendo sí en conjunto. Un grupo no puede
@@ -392,7 +392,7 @@
       de largo o esconderse son respuestas equivocadas. La coherencia personal
       en las pqueñas cosas de cada día es la que nos hace ser personas integras,
       libres y realizadas. Vivir una vida así es toda una responsabilidad, un
-      verdadero compromiso que pide creatividad, reﬂexión, constancia. El camino
+      verdadero compromiso que pide creatividad, reflexión, constancia. El camino
       a transformación de la realidad y una auténtica liberación y promoción
       humana. Las relaciones dentro del grupo se fortalecen con la actitud de
       servicio responsable de cada uno con los demás.
@@ -401,7 +401,7 @@
     <h3>ACTIVIDAD N° 3: TEATRO DE SOMBRAS</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad busca que el grupo reﬂexione sobre la importancia de un
+      Esta actividad busca que el grupo reflexione sobre la importancia de un
       trabajo digno y la responsabilidad que nos da frente a la sociedad
     </p>
     <h3>- Aclaración:</h3>
@@ -521,7 +521,7 @@
         común? ¿Qué puede aportar cada uno para bien de los demás?
       </li>
     </ol>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Comunidad responsable:</strong> Creemos en un Jesús que supo
       relacionarse con su pueblo y trabajar a la par, a partir de realizar bien
@@ -578,7 +578,7 @@
         a otra persona. Como estos, hay muchos casos más que están ciertamente
         relacionados unos con otros. Nuestros Rastreadores en general no se
         encuentran en edad legal de tener un trabajo formal. Sin embargo es
-        importante orientar esta reﬂexión a la importancia del estudio. La
+        importante orientar esta reflexión a la importancia del estudio. La
         participción activa en la escuela es la responsabilidad del adolescente.
         Ser partícipe y co-contructor (junto a sus docentes) de su aprendizaje.
       </li>
@@ -663,10 +663,10 @@
         de la dura prueba de la trilla que corta y tritura, y allí el barbecho
         los reintegrará al humus fértil de los nuevos ciclos. Su signo es la
         espera. Los campos de cosecha no se cargan de animales. Las aguadas se
-        cansan de reﬂejar el cielo y hasta quizá se cubran de moho en su</em
+        cansan de reflejar el cielo y hasta quizá se cubran de moho en su</em
       >
     </p>
-    <p><em>superficie, como si tuvieran pudor de reﬂejarlo.</em></p>
+    <p><em>superficie, como si tuvieran pudor de reflejarlo.</em></p>
     <p>
       <em
         >El sentido de estos sembrados es la semilla. Hacia allí marcha todo lo
@@ -692,7 +692,7 @@
         viejas aguadas y los animales que en ellas se abrevan.</em
       >
     </p>
-    <h3>- Se reﬂexiona:</h3>
+    <h3>- Se reflexiona:</h3>
     <p>
       ¿Cuáles eran los talentos del verdeo y de la cosecha? A que se refiere con
       que la semilla vive multiplicada?Casa uno piensa en la parte que más le
@@ -702,7 +702,7 @@
     <h3>- Se actúa:</h3>
     <p>
       Proponer algún compromiso sobre la responsabilidad en algún aspecto de la
-      vida cotidiana que cada uno mencionó en la reﬂexión.
+      vida cotidiana que cada uno mencionó en la reflexión.
     </p>
     <p>
       <strong><em>Tomando Mate</em></strong>
@@ -720,7 +720,7 @@
     <p>Con ella descubrí que la Corresponsabilidad…</p>
     <p>La Corresponsabilidad entre los Rastreadores / Hogueras es…</p>
     <p>Por eso, creo que necesito seguir trabajando con ellos en…</p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>Leer el siguiente extracto del “Libro de los Abrazos” por E. Galeano:</p>
     <p>
       <strong><em>El Mundo</em></strong>
