--- a/src/21-naturaleza.html
+++ b/src/21-naturaleza.html
@@ -115,7 +115,7 @@
     </p>
     <p>mos? ¿Cómo las valoramos?</p>
     <p>
-      ¿Somos conscientes de la inﬂuencia del hombre en el equilibrio del
+      ¿Somos conscientes de la influencia del hombre en el equilibrio del
       planeta?
     </p>
     <h2>ALGUNAS COSAS CLARAS…</h2>
@@ -158,7 +158,7 @@
         observan mis caminos!»</em
       >
     </p>
-    <h3>-Reﬂexión:</h3>
+    <h3>-Reflexión:</h3>
     <p>
       La sabiduría de Dios es quien nos habla en este fragmento. ¿Cómo podemos
       interpretar lo que nos dice? Los invitamos a releer estos versículos y
@@ -170,7 +170,7 @@
       permite sentirla como un regalo de Dios, considrarla como un don, algo
       realmente valioso y apreciar que tenemos salud para poder disfrutarla
       cuando la experimentamos con nuestros sentidos: en el viento que sopla, el
-      pasto o la tierra que pisamos con nuestros pies, el aroma de las ﬂores,
+      pasto o la tierra que pisamos con nuestros pies, el aroma de las flores,
       los colores del amanecer, los árboles que nos regalan su sombra, la vista
       preciosa que nos obsequian las cimas de las montañas. Esta es la
       preciosura de la creación, de la cual nosotros como humanos también somos
@@ -240,7 +240,7 @@
     <p>¿Qué puede simbolizar?</p>
     <p>¿Qué ejemplos nos dan?</p>
     <p>¿Qué podemos aprender de ellos como grupo?</p>
-    <h3>-Reﬂexión:</h3>
+    <h3>-Reflexión:</h3>
     <p>
       Desde observar la inmensidad de las estrellas hasta descubrir lo perfecto
       de un pequeño pimpollo, en cada elemento de la naturaleza podemos ver más
@@ -250,7 +250,7 @@
       tiendan al cuidado de la naturaleza permiten estar más cerca de Dios y
       tener un diálogo más cercano. A su vez la oración cercana con Dios nos
       invita a que defendamos la vida. Una cosa queda incompleta sin la otra.
-      Reconocer en ella el reﬂejo del modelo de vida que Dios nos invita a
+      Reconocer en ella el reflejo del modelo de vida que Dios nos invita a
       imitar: La naturaleza esejemplo de perfecto equilibrio y convivencia.
     </p>
     <p>
@@ -354,9 +354,9 @@
       <strong>Las plantas:</strong> Es impresionante la variedad de formas,
       colores, perfumes, texturas, tamaños. En ellas se puede ver también la
       variedad de formas en las que Dios actúa en medio nuestro: desde la firmeza
-      de los troncos hasta la ternura de una ﬂor. Las plantas nos hablan de
+      de los troncos hasta la ternura de una flor. Las plantas nos hablan de
       paciecia, constancia, esperanza y proyectos a largo plazo. Brindan
-      generosamente sus ﬂores y frtos que han producido con su trabajo y que
+      generosamente sus flores y frtos que han producido con su trabajo y que
       encierran la vida nueva que promete la semilla. Corre por dentro suyo
       una sabia que comunica, alimenta y da fuerzas, como un Espíritu de vida.
     </p>
@@ -566,7 +566,7 @@
     <p>¿Qué significa para nosotros estar en contacto con la naturaleza?</p>
     <p>¿Que descubrimos en ella?</p>
     <p>
-      <strong>Reﬂexión:</strong> Ver actividad N°1
+      <strong>Reflexión:</strong> Ver actividad N°1
       <strong>Palabra de Dios:</strong> Ver actividad N°1
     </p>
     <h3>ACTIVIDAD N° 3 – EL ANTIGÉNESIS</h3>
@@ -690,7 +690,7 @@
     <p>
       Pero te quiero… y trato de decírtelo a través del azul del cielo y del
       viento que susurra entre las hojas de los árboles, te sonrío en el color
-      de las ﬂores y en el pasto verde que crece bñado por el sol. Te hablo
+      de las flores y en el pasto verde que crece bñado por el sol. Te hablo
       desde el mar y los arroyos ¿me escuchás? Siempre le doy a las aves
       canciones nuevas para cantarte y alegrarte el día. Te visto de cálidos
       colores y rayitos de sol. Perfumo el aire para vos con aromas y renuevo la
@@ -721,7 +721,7 @@
       lanzaron a construir un mundo distinto?
     </p>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1</li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1</li>
       <li><strong>- Palabra de Dios:</strong> Ver actividad N°1</li>
     </ul>
     <h2>EVALUACIÓN</h2>
