--- a/src/22-vida.html
+++ b/src/22-vida.html
@@ -132,7 +132,7 @@
         discípulos se acercaron a él. Entonces tomó la palabra y comenzó a
         enseñarles, diciendo: “Felices los que tienen alma de pobres, porque a
         ellos les pertenece el Reino de los Cielos. Felices los pacientes,
-        porque recibirán la tierra en herencia. Felices los aﬂigidos, porque
+        porque recibirán la tierra en herencia. Felices los afligidos, porque
         serán consolados. Felices los que tienen hambre y sed de justicia,
         porque serán saciados. Felices los misericordiosos, porque obtendrán
         misericordia. Felices los que tienen el corazón puro, porque verán a
@@ -150,7 +150,7 @@
         que los precedieron.”»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Es importante escuchar a Dios en su Palabra y preguntarnos si realmente
       somos felices con lo que hacemos todos los días. Ser feliz no es un
@@ -213,7 +213,7 @@
       problemas que mchas veces los adolescentes ocultan porque les generan
       dolor. Estos problemas son los motvos que buscan una salida en las
       adicciones. Adicción significa no hablar. Por eso el ejercicio de poner en
-      palabras las situaciones conﬂictivas para esta edad resulta algo sumamente
+      palabras las situaciones conflictivas para esta edad resulta algo sumamente
       sanador y necesario.
     </p>
     <h3>- Actividad:</h3>
@@ -322,7 +322,7 @@
         ustedes?
       </li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Las adicciones son un problema que no se pueden trabajar aisladamente sino
       que dependen de otros factores, son en general consecuencias de otros
@@ -353,7 +353,7 @@
       la adicción tiene mucho de no poder expresarse, comunicarse, ni compartir
       con los demás. La misma palabra “adicción” significa que existe algo que no
       se dice. Quien tiene buenos amigos, una buena relación con su familia y un
-      diálogo ﬂuido y sincero, difícilmente necesite buscar "protección" o
+      diálogo fluido y sincero, difícilmente necesite buscar "protección" o
       "contención" en estas "drogas".
     </p>
     <p>
@@ -555,7 +555,7 @@
       ¿Cómo podemos defender y hacer crecer la vida del grupo y de las familias?
     </p>
     <p>Buscar un compromiso en defensa de la vida para realizar como grupo</p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Jesús recorrió su tierra anunciando la defensa de la Vida en todas sus
       formas y está hoy presente en signos que anuncian vida nueva y en los
