--- a/src/23-esperanza.html
+++ b/src/23-esperanza.html
@@ -65,7 +65,7 @@
     <ul>
       <li>
         - ¿Percibís signos de esperanza con frecuencia en tus oraciones? En lo
-        posible trata de reﬂexionar estas inquietudes que tenías o que tenés
+        posible trata de reflexionar estas inquietudes que tenías o que tenés
         actualmente, para demostrarle a los chicos que la esperanza es una
         virtud que no hay que perder.
       </li>
@@ -80,7 +80,7 @@
         tenemos en ti.»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       En la historia de los hombres la esperanza ha sido un dato fundamental
       para su existencia: gracias a ella, el ser humano se ha superado, ha
@@ -157,7 +157,7 @@
       <li><strong>2- Barriletes</strong></li>
       <li><strong>3- Signos de pista</strong></li>
       <li><strong>4- Feria latina</strong></li>
-      <li><strong>5- Esperar una ﬂor</strong></li>
+      <li><strong>5- Esperar una flor</strong></li>
       <li><strong>6- La siembra</strong></li>
       <li><strong>7- Regar la planta</strong></li>
     </ol>
@@ -285,7 +285,7 @@
         de las sombras darán luz" (+1976).
       </li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong><em>El nombre de Jesús:</em></strong> En la sociedad judía el
       nombre era muy importante. El nombre era la pesonalidad misma. Mostraba la
@@ -326,7 +326,7 @@
         a los oprimidos y proclamar un año de gracia del Señor.»</em
       >
     </p>
-    <p>Guías preguntas de reﬂexión:</p>
+    <p>Guías preguntas de reflexión:</p>
     <p>» ¿Qué cosas le gustan a Jesús? ¿Qué espera?</p>
     <p>» ¿De qué cosas queremos ser salvados?</p>
     <p>» ¿Qué cosas nos oprimen?</p>
@@ -355,7 +355,7 @@
     <p>» ¿Cómo podemos devolverles el sentido y la esperanza?</p>
     <p>
       Conversar sobre las respuestas y sintetizarlas en una frase o dibujo para
-      poner en el barrilete. Acompañar también con ﬂecos u otros adornos. Ir a
+      poner en el barrilete. Acompañar también con flecos u otros adornos. Ir a
       un espacio amplio y remontar el o los barriletes armados. Más tarde
       reunirse nuevamente y plantear:
     </p>
@@ -365,7 +365,7 @@
         impulsa a nosotros? ¿Nos da verdadera alegría?
       </li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong><em>Transformar la muerte en vida:</em></strong>
     </p>
@@ -470,7 +470,7 @@
       Acompañar el recorrido permitiendo que tomen caminos equivocados, pero
       ayudándolos a retomarlo si ellos solos no pudieran.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>Al llegar a la parada intermedia, plantear:</p>
     <p>¿Cómo fueron descubriendo e interpretando los signos?</p>
     <p>¿Cómo distinguir los signos de "vida" entre los de "muerte"?</p>
@@ -592,7 +592,7 @@
       ¿Qué santos o vírgenes americanas conocen? ¿Qué camino está siguiendo la
       Iglesia en Latinoamérica?
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong><em>América Latina: Patria Grande:</em></strong>
     </p>
@@ -701,7 +701,7 @@
     <h3>- Orientación:</h3>
     <p>
       Las actividades propuestas están relacionadas con el cuento "Esperar una
-      ﬂor". El cuento está dividido en cuatro partes y cada una tiene asociada
+      flor". El cuento está dividido en cuatro partes y cada una tiene asociada
       una actividad para realizar a continuación de la lectura. Realizarlas en
       una salida o paseo de todo el día, como para tener más tiempo para hacer
       otras actividades entre medio. La idea es comenzar el día con la primer
@@ -722,18 +722,18 @@
     <h3>- Actividad:</h3>
     <ol>
       <li>
-        <strong>1° Presentación de la actividad Esperar a una ﬂor</strong> El
+        <strong>1° Presentación de la actividad Esperar a una flor</strong> El
         hombre se detuvo ante la casa de bloques sin revocar. Era pobre, pero
         parecía tan bella.... Más hermosa que las casas nuevas y recién pintadas
-        frente a la plaza del pueblo. Un jardín inundado de ﬂores invitaba a
+        frente a la plaza del pueblo. Un jardín inundado de flores invitaba a
         quedarse. Hasta la brisa de la tarde, como una enamorada, se mecía entre
-        ellas, y no quería irse. El hombre quedó fascinado. Todas las ﬂores eran
+        ellas, y no quería irse. El hombre quedó fascinado. Todas las flores eran
         lindas. Pero había una más hermosa que todas, más blanca que las nubes
         del verano, y le pareció que eran tiernas como los labios de su pequeña
         hija. Pensó para él... ¿Compraría un ramo?... Pero no... El dueño no las
         va a vender. ¿Le pediría una o dos, entonces?... Para llevarlas conmigo
         a casa... Pero no... Se deshojarían por el camino, o se marchitarían
-        pronto en el ﬂorero. Tal vez lo mejor sea cultivaras en mi tierra.
+        pronto en el florero. Tal vez lo mejor sea cultivaras en mi tierra.
         Entonces le pido una ramita, un gajo. Y fue a hablar con el dueño del
         jardín...
       </li>
@@ -741,9 +741,9 @@
     <ol>
       <li>
         <strong>2° Parte: La siembra</strong> ¿Así que no sabe su nombre? -
-        preguntó el visitante. No, señor. Solo sé que es la ﬂor más linda que he
-        visto. Me gustaría plantarlas en mi casa. Le puedo dar ﬂores secas. Pero
-        tiene que esperar que se seque la ﬂor. Y esperar. Enterrar luego la
+        preguntó el visitante. No, señor. Solo sé que es la flor más linda que he
+        visto. Me gustaría plantarlas en mi casa. Le puedo dar flores secas. Pero
+        tiene que esperar que se seque la flor. Y esperar. Enterrar luego la
         semilla. Y esperar. Después regar. Y esperar.
       </li>
     </ol>
@@ -774,13 +774,13 @@
         abusos, excesos y cosas
       </li>
     </ul>
-    <p>superﬂuas que no nos ayudan a crecer".</p>
+    <p>superfluas que no nos ayudan a crecer".</p>
     <p>
       Tener preparada una lata vacía para cada chico y semillas. Se necesitan
       también algunas herramientas.
     </p>
     <p>
-      El tesoro consiste en una bolsita con semillas y unas ramas con ﬂores. Al
+      El tesoro consiste en una bolsita con semillas y unas ramas con flores. Al
       encontrarlo, abrirla y repartir las semillas y las ramas entre todos.
     </p>
     <p>Preguntar:</p>
@@ -803,13 +803,13 @@
     <ol>
       <li>
         <strong>3° Parte Regar la planta</strong> El vecino de los gajos se
-        durmió esa noche. Soñó que su jardín era una cascada de ﬂores. Miró el
+        durmió esa noche. Soñó que su jardín era una cascada de flores. Miró el
         jardín del vecino y lo vio muerto. Todo era noche y terrones negros más
         terrones negros. Soñó que le daba lástima su vecino y le llevaba un ramo
-        de sus ﬂores. ¡Tenía tantas! El vecino esperanzado ni dormía ni soñaba,
+        de sus flores. ¡Tenía tantas! El vecino esperanzado ni dormía ni soñaba,
         Solo vigilaba. De día regaba la semilla y rompía los terrones duros. De
-        noche pensaba en la ﬂor. Esperaba. Sabía que la vida era más grande y
-        más fuerte que sus manos y que todas las ganas juntas de ver la ﬂor. De
+        noche pensaba en la flor. Esperaba. Sabía que la vida era más grande y
+        más fuerte que sus manos y que todas las ganas juntas de ver la flor. De
         noche se levantaba, iba al jardín y tocaba los terrones con ternura.
         Quería palpar el anuncio de algún brote. A veces estaba tentado de
         hundir el dedo hasta alcanzar una semilla, para ver si alguna había
@@ -817,24 +817,24 @@
         vecinos cada mañana empezaba una lucha. Y cada tarde volvía la
         esperanza. En uno esperanza de semilla hundida. En otro ilusión de gajo
         trasplantado, - Se me secó un gajo - dijo - Pero me quedan tres todavía.
-        ¿Y usted? - Nada, tampoco, por ahora nada. Pero espero a la ﬂor, Creo en
+        ¿Y usted? - Nada, tampoco, por ahora nada. Pero espero a la flor, Creo en
         el tiempo, en la tierra y en mis manos.El vecino que no sabía esperar, a
         la tarde siguiente, más triste y lentamente fue a contarle que se había
-        secado otro gajo. Y no vio brotes no ﬂores en el jardín del vecino que
+        secado otro gajo. Y no vio brotes no flores en el jardín del vecino que
         sabía esperar. Solo sintió el olor húmedo de la tierra recién regada.
         Pasaron varias veces el sol y las estrellas, cuando el hombre de las
         semillas notó que el vistante de los gajos no había vuelto. Decidió él
         entonces visitarlo. Al entrar vio en el jardín los dos gajos secos, los
         que quedaban. Se entristeció y se fue sin decirle palabra. Volvió a su
         jardín y pensó... ¡Qué dura es la vida sin esperanza! Cuando ya no se
-        puede esperar ninguna ﬂor. Cuando no hay nada para regar ni cuidar. El
+        puede esperar ninguna flor. Cuando no hay nada para regar ni cuidar. El
         tenía esperanza. Lo nuevo puede
       </li>
     </ol>
     <p>
-      ser mañana o ahora - se dijo – Hoy puede ser la hora de la ﬂor. Pero cuánto
-      cuesta espera que la ﬂor se marchite, se seque, se rompa la semilla y
-      enterrada resucite la nueva ﬂor. Estaba cansado, hacía veinte noches que
+      ser mañana o ahora - se dijo – Hoy puede ser la hora de la flor. Pero cuánto
+      cuesta espera que la flor se marchite, se seque, se rompa la semilla y
+      enterrada resucite la nueva flor. Estaba cansado, hacía veinte noches que
       no dormía. Se había olvidado de soñar. Que cada chico busque un recipiente
       grande.
     </p>
@@ -860,12 +860,12 @@
         tan fuerte que sol esa ma- ñana se despertó más temprano que nunca.
       </li>
       <li>
-        - y vio la savia en ese brote. Y en esa savia la ﬂor. Y más y nuevas
-        semillas en esa ﬂor. Para él, los vecinos, tantos hombres." y él, que
-        creía en el tiempo, en la tierra, en sus manos y en el don de la ﬂor,
+        - y vio la savia en ese brote. Y en esa savia la flor. Y más y nuevas
+        semillas en esa flor. Para él, los vecinos, tantos hombres." y él, que
+        creía en el tiempo, en la tierra, en sus manos y en el don de la flor,
         sintió que la vida pasa por la muerte, y que la esperanza es un túnel de
         noches juntas con una luz en la punta. Y se durmió pensando...
-        <em>Sí, nada más hermoso que esperar una ﬂor.</em>
+        <em>Sí, nada más hermoso que esperar una flor.</em>
       </li>
     </ul>
     <h3>- Oración y Evaluación</h3>
@@ -883,18 +883,18 @@
       Luego los que quieran pueden ponerla <strong>en común.</strong> Al
       terminar, dejar las macetas al sol.
     </p>
-    <h3>Reﬂexión:</h3>
+    <h3>Reflexión:</h3>
     <p>
       <strong>Vale la pena esperar:</strong> Tanto la semilla como el gajo con
-      ﬂores vienen de la mima planta, tienen un origen común, pero les espera un
-      destino muy distinto. Seguramente las ﬂores son mucho más lindas y
+      flores vienen de la mima planta, tienen un origen común, pero les espera un
+      destino muy distinto. Seguramente las flores son mucho más lindas y
       atrayentes, pero no duran mucho. Al poco tiepo, por más que se planten o
       se pongan en agua se marchitan. Por más que aparenten vida, en realidad
       están muertas, ya no corre savia en su tallo y no queda nada que esperar
       de ellas. En cambio una semilla es fea, pequeña y parece muerta, pero
       dentro tiene mucha vida. Así como se la ve, si se la entierra y se la
-      atiende, se transforma en una nueva planta con motones de ﬂores. Y no sólo
-      unas ﬂores, sino que da más semillas que darán nuevamente más ﬂores y más
+      atiende, se transforma en una nueva planta con motones de flores. Y no sólo
+      unas flores, sino que da más semillas que darán nuevamente más flores y más
       semillas. Claro que demorará su tiempo, pero vale la pena esperar. Lo
       mismo pasa en nuestro grupo y en nuestra vida. Muchas veces se nos
       presentan ofertas vistosas y atrayentes pero que es en realidad son
@@ -935,7 +935,7 @@
     </p>
     <p>
       <strong>Consolidar el camino:</strong> Estas semillas deberán brotar y dar
-      una gran ﬂor hermosa como nuestra patrulla. Es pequeña, pero crecerá
+      una gran flor hermosa como nuestra patrulla. Es pequeña, pero crecerá
       dentro de cada uno de nuestros corazones y será grande creciendo junto con
       nuestros deseos y esperanzas de "consolidar el camino". El lema de la meta
       parcial da idea de proceso, crecimiento, esfuerzo y paciencia, lo mismo
@@ -973,7 +973,7 @@
       Por eso, creo que necesito seguir trabajando con ellos en… Y yo, con
       respecto a la esperanza tengo que crecer en…
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Esperamos contra toda esperanza</strong> Hoy al fin tenemos que
       seguir caminando en paz, esperamos contra toda esperanza. Y es así que
@@ -982,7 +982,7 @@
       fuerza y sos confianza.
     </p>
     <p>
-      No aﬂojar seguirte hasta el final tu cruz abrazar esperamos contra toda
+      No aflojar seguirte hasta el final tu cruz abrazar esperamos contra toda
       esperanza. Esperar también es transformar un sueño en realidad, esperamos
       contra toda esperanza
     </p>
