--- a/src/24-servicio.html
+++ b/src/24-servicio.html
@@ -202,7 +202,7 @@
       >
       »
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Servir a Dios en los hermanos es la misión que tenemos en nuestro paso por
       esta tierra. El servicio es el fruto del amor y siempre nos llena de
@@ -261,7 +261,7 @@
     <p>¿De qué forma fue su servicio?</p>
     <p>¿En qué hechos de su vida los vemos?</p>
     <p>¿Cómo vivimos el servicio en nuestro grupo?</p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Dios nos llama constantemente, nos invita, nos pregunta, nos propone, nos
       da oportunida-
@@ -428,7 +428,7 @@
       oración donde se desarrollan habitualmente las actividades, allí podrán
       verse diferentes imágenes de servicio
     </p>
-    <p>como síntesis de una fe activa que reﬂeja la manera de ser de María.</p>
+    <p>como síntesis de una fe activa que refleja la manera de ser de María.</p>
     <h3>- Actividad:</h3>
     <p>
       Presentar brevemente la persona de María leyendo el texto "María
@@ -506,7 +506,7 @@
       alguna acción concreta de servicio al grupo.
     </p>
     <p>
-      <strong>Reﬂexión:</strong> Ver actividad N°1.
+      <strong>Reflexión:</strong> Ver actividad N°1.
       <strong>Palabra de Dios:</strong> Ver actividad N°1.
     </p>
     <h3>ACTIVIDAD N° 3 – ATADOS DE MANOS</h3>
@@ -573,7 +573,7 @@
           ¿Cómo actuamos con nuestros compañeros de grupo? Leer el Evangelio de
           "Si el grano no muere" (Jn. 12, 20-26) y comentarlo. Buscar un
           compromiso para realizar personalmente, que consista en alguna acción
-          concret de servicio al grupo. <strong>- Reﬂexión:</strong> Ver
+          concret de servicio al grupo. <strong>- Reflexión:</strong> Ver
           actividad N°1. <strong>- Palabra de Dios:</strong> Ver actividad N°1.
         </td>
       </tr>
@@ -634,7 +634,7 @@
       del día.
     </p>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1.</li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
       <li><strong>- Palabra de Dios:</strong> Ver actividad N°1.</li>
     </ul>
     <h2>EVALUACIÓN</h2>
