--- a/src/25-experiencia-del-agua.html
+++ b/src/25-experiencia-del-agua.html
@@ -357,7 +357,7 @@
       Observar el curso de agua cercano al que se acampe. Realizar un
       reconocimiento del lugar sacando fotografías, midiendo la velocidad,
       profundidad o ancho del río, haciendo un dibujo, tomando muestras de agua,
-      etc. Recorrer las cercanías buscando manifestaciones de ﬂora y fauna.
+      etc. Recorrer las cercanías buscando manifestaciones de flora y fauna.
     </p>
     <p>Reunirse mirando hacia el agua y preguntar:</p>
     <p>¿Cómo es el agua?</p>
@@ -384,9 +384,9 @@
       alegría; inmensa como Tú. Señor, haznos como el agua. Amén
     </p>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Observando el ambiente acuático:</li>
+      <li><strong>- Reflexión:</strong> Observando el ambiente acuático:</li>
       <li>
-        • Observar la ﬂora: Descubrir los tipos de árboles y arbustos que se
+        • Observar la flora: Descubrir los tipos de árboles y arbustos que se
         encuentran cerca, los que hunden sus raíces en el agua, detectar los de
         truncos rectos, verticales o torcidos en algún sentido. Tratar de
         encontrar las razones y consecuencias de esas características.
@@ -467,17 +467,17 @@
     <h3>ACTIVIDAD N° 2: RECIPIENTES EXTRAÑOS</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad se orienta a que comenzar a preparar el lugar de reﬂexión
+      Esta actividad se orienta a que comenzar a preparar el lugar de reflexión
       donde se realizará la Bendición del agua. Relacionar con lo realizado en
       las consignas "Servicio", "Solidaridad" y “Obediencia".
     </p>
     <h3>- Actividad:</h3>
     <p>
-      Motivar sobre la necesidad de preparar un lugar de reﬂexión para compartir
+      Motivar sobre la necesidad de preparar un lugar de reflexión para compartir
       momentos importantes de la experiencia.
     </p>
     <p>
-      Preparar un lugar de reﬂexión que sea cómodo y agradable. Construir allí
+      Preparar un lugar de reflexión que sea cómodo y agradable. Construir allí
       una pequeña gruta o lugar adornado en el cual se colocará un recipiente
       con agua, como signo principal que acompañar a toda la experiencia,
       acompañándolo con una imagen de María y otros signos que luego vayan a
@@ -492,7 +492,7 @@
     <p>¿Cómo es de dispuesta?</p>
     <p>
       ¿Estamos disponibles como ella? Colocar el agua que recogió cada uno en el
-      recipiente de la gruta y bendecirla. Reﬂexionar a partir de las preguntas:
+      recipiente de la gruta y bendecirla. Reflexionar a partir de las preguntas:
     </p>
     <p>¿Qué significa el agua bendita?</p>
     <p>¿Cuáles son sus usos?</p>
@@ -518,7 +518,7 @@
       todos los participantes de la experiencia, como signo del compromiso de
       querer imitarla.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Agua disponible:</strong> Generosa, servicial, gratuita, regalo.
       Se sirven todos, no se niega, siempre dispuesta. Se adapta y no rechaza a
@@ -607,7 +607,7 @@
       Explicar la técnica de armado del filtro de agua u otras formas de purificar
       agua. Armar grupos pequeños y que cada uno haga su filtro o método similar.
       No utilizarlo todavía, dejar todo preparado y listo para usar más
-      adelante. Reunirse en el lugar de reﬂexión sentados en ronda, en torno al
+      adelante. Reunirse en el lugar de reflexión sentados en ronda, en torno al
       recipiente con el agua bendita. Traer barro de la orilla del arroyo, lo
       más sucio, podrido y con feo olor posible y ponerlo en un recipiente en el
       centro de la ronda junto al recipiente del agua. Ambientar cantando
@@ -676,7 +676,7 @@
       sacerdote simbólicamente les lava las manos, se vayan a bañar al arroyo u
       otra fuente de agua.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>El pecado nos ensucia:</strong> En nuestra vida de fe nos
       ensuciamos: hacemos el mal a los demás: el pecado. Al pecar nos alejamos
@@ -918,7 +918,7 @@
       represente algo o alguien especial (aguien que marcó su vida fuertemente;
       un familiar, alguien querido que falleció, algún modelo de vida, un santo
       que le impactó, también puede ser el mismo que lleva de nacimiento). Lo
-      importante es que permita reﬂexionar y representar el compromiso de ser
+      importante es que permita reflexionar y representar el compromiso de ser
       hombre nuevo.
     </p>
     <p>
@@ -935,7 +935,7 @@
       Se pueden hacer frases breves donde se afirme la fe y repetir todos "Sí
       creemos".
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Agua que da vida:</strong> Fuente y origen de la vida. Permite,
       favorece y conserva la vida. Renueva. Es símbolo de la
@@ -976,7 +976,7 @@
       asumir ese hombre nuevo que queremos ser a partir de esta experiencia, es
       un signo de la renovación que queremos dar en nuestra vida. Ponerle nuevo
       nombre a las cosas es comenzar a transformarlas. Los nombres no son
-      inocetes ni casuales. Reﬂejan una realidad que según como se la nombre se
+      inocetes ni casuales. Reflejan una realidad que según como se la nombre se
       entiende o interpreta de distinta manera.
     </p>
     <h3>
@@ -1021,17 +1021,17 @@
       <li>
         <strong>- Actividad:</strong> A la noche, ir hasta la orilla de un
         arroyo o río y apagar todas las luces. Crear un clima muy especial, que
-        se "escuche la naturaleza” y que motive a la reﬂexión. Tratar que los
+        se "escuche la naturaleza” y que motive a la reflexión. Tratar que los
         chicos se metan en su silencio, que puedan comunicarse con Dios en un
         mometo de oración a través del agua. Invitar a hacer una «oración
         relajada» en la que se fije la vista en el agua y se relaja el cuerpo
         poniéndolo en una posición cómoda. . Ir haciendo un relato que pueda ser
         seguido por el pensamiento de los chicos y que ayude a que a través de
-        su imaginación se encuentren con Dios. Reﬂexionar sobre sus vidas, que
+        su imaginación se encuentren con Dios. Reflexionar sobre sus vidas, que
         muchas veces son parecidas al recorrido que realiza el agua de un río.
       </li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Agua creadora: Abre caminos, crea nuevos rumbos. Surge, corre, construye,
       busca y nada la detiene. El agua del río corre, se mueve, avanza, entre
@@ -1075,7 +1075,7 @@
       >
     </p>
     <h3>Isaías 41, 17-20</h3>
-    <p><em>«Los aﬂigidos y los necesitados buscan agua, pero no la hay,</em></p>
+    <p><em>«Los afligidos y los necesitados buscan agua, pero no la hay,</em></p>
     <p><em>su lengua está reseca de sed.</em></p>
     <p><em>Yo, el Señor, les responderé,</em></p>
     <p><em>yo, el Dios de Israel, no los abandonaré.</em></p>
@@ -1185,7 +1185,7 @@
     <ul>
       <li>-Pero los ojos son ciegos. Hay que buscar con el corazón. Cap.XXV</li>
       <li>
-        <strong>- Reﬂexión:</strong> <strong>Agua que refresca:</strong> Da
+        <strong>- Reflexión:</strong> <strong>Agua que refresca:</strong> Da
         frescura, alivia, descansa, alegra, rejuvenece. Nos da nuevo ánimo y
         espíritu. Al refrescarnos es como si nos rejuveneciera, nos diera nuevo
         ánimo y renovara nuestro espíritu. El agua no sólo es necesaria para la
@@ -1237,7 +1237,7 @@
         servir como hostias para la misa.
       </li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Agua que une:</strong> Integra, compacta, une las cosas. Es
       homogénea, penetra e impregna. Símbolo de comunión. El agua es un ejemplo
@@ -1302,7 +1302,7 @@
         - ¿Cómo podemos utilizarlo para transformar las realidades injustas?
       </li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Agua poderosa:</strong> Tiene mucha fuerza, poder, capacidad de
       hacer y deshacer, construir y destruir tanto lo bueno como lo malo. El
@@ -1344,7 +1344,7 @@
         a hacer negocios Y a explotar a sus trabajadores; el día de ayuno lo
         pasan en disputas y peleas y dando golpes criminales con los puños. Un
         día de ayuno así, no puede lograr que yo escuche sus oraciones. ¿Creen
-        que el ayuno que me agrada consiste en aﬂigirse, En agachar la cabeza
+        que el ayuno que me agrada consiste en afligirse, En agachar la cabeza
         como un junco Y en acostarse con ásperas ropas sobre la ceniza? ¿Eso es
         lo que ustedes llaman “ayuno” y “día agradable al Señor”? Pues no lo
         es.</em
@@ -1362,7 +1362,7 @@
         seguirá. Entonces, si me llamas, yo responderé; si gritas pidiendo
         ayuda, yo te diré: “Aquí estoy”. Si haces desaparecer toda opresión, Si
         no insultas a otros ni les levantas calumnias, si tedas a ti mismo en
-        servicio del hambriento, si ayudas al aﬂigido en su necesidad, tu luz
+        servicio del hambriento, si ayudas al afligido en su necesidad, tu luz
         brillará en la oscuridad, tus sombras se convertirán en luz de mediodía.
         Yo te guiaré continuamente, daré fuerza a tu cuerpo y serás como un
         jardín bien regado, como un manantial al que no le falta el agua. Tu
@@ -1396,7 +1396,7 @@
       <li>- ¿Con quienes nos relacionamos?</li>
       <li>- ¿Cómo nos comunicamos con los demás?</li>
     </ul>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Agua que comunica</strong> Vínculo, camino, medio de comunicación
       y encuentro con los demás. Abierta, sin fronteras. El agua ha servido
@@ -1646,7 +1646,7 @@
       disponible", la piedra pulida del "Agua poderosa" o un poco de barro del
       "Agua que Iimpia”. A partir del símbolo, que preparen una síntesis con las
       ideas principales. Ambientar el lugar, ensayar los cantos y terminar de
-      preparar todos los detalles. Reunirse en el lugar de reﬂexión y comenzar
+      preparar todos los detalles. Reunirse en el lugar de reflexión y comenzar
       la celebración de la misa. Cada grupo presenta el signo sobre la
       característica del agua y explica la síntesis que preparó. Si es
       necesario, redondear las presentaciones remarcando las ideas principales.
@@ -1660,7 +1660,7 @@
       Comulgar bajo las dos especies, explicando la presencia del agua junto al
       vino.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>Ofrecer el agua:</strong> En toda la experiencia fuimos
       aprendiendo a ser auténticos y no aparentar cosas falsas. A lo largo de la
@@ -1768,7 +1768,7 @@
     </p>
     <p>por su generosidad para sostener la vida.</p>
     <p>
-      Oh agua, en tu misteriosa belleza haces ﬂorecer al desierto. Una minúscula
+      Oh agua, en tu misteriosa belleza haces florecer al desierto. Una minúscula
       gota, reunida con miles de gotas, riega las semillas y las futuras
       cosechas para alimentarnos nosotros y todas las criaturas. Una minúscula
       gota multiplicada, sacia nuestra ardiente sed.
@@ -1799,7 +1799,7 @@
       Jesucristo, Palabra Eterna, y el Espíritu, Manantial de Sabiduría.
     </p>
     <p>AMÉN.</p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       <strong>La familia:</strong> Un lugar importante para vivir la consigna
       será en la familia: allí tenemos que ser y no aparetar, allí tenemos que
