--- a/src/26-renovacion.html
+++ b/src/26-renovacion.html
@@ -44,7 +44,7 @@
     <h3>ACTIVIDAD N° 1 – VIAJE EN GLOBO</h3>
     <h3>- Orientaciones:</h3>
     <p>
-      La actividad pretende reﬂexionar sobre los valores trabajados durante el
+      La actividad pretende reflexionar sobre los valores trabajados durante el
       año para que el gru-
     </p>
     <p>po resalte las enseñanzas más importantes.</p>
@@ -126,7 +126,7 @@
       salvavidas, del cual los elementos deberán ser arrojados para evitar que
       se hunda.
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Dios no creó libres, la persona se construye libre, se construye mediante
       un largo proceso de opciones, de avances a veces más rápidos y a veces más
@@ -144,7 +144,7 @@
       hayan trataron algunos valores de todos los que se podrían enumerar,
       también ésta jerarquización de valores implica una opción y comprometerse
       a futuras opciones. Armar la escala de valores es una tarea de toda la
-      vida. Constantemente hay que seguir rﬂexionando y puliendo la escala de
+      vida. Constantemente hay que seguir rflexionando y puliendo la escala de
       valores tanto personal como comunitariamente. La renovación de la promesa
       es decir que "sí' nuevamente a la promesa de querer ser fiel al llamado de
       Cristo, de querer realizarse como hombre o como mujer cristiana, de querer
@@ -217,7 +217,7 @@
       quede como memoria de la vida del grupo.
     </p>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1.</li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1.</li>
       <li>
         <strong><em>- Palabra de Dios:</em></strong> Ver actividad N°1.
       </li>
@@ -249,14 +249,14 @@
       Relacionar la renovación con las opciones del tobogán de "tirarse" o
       "volverse atrás".
     </p>
-    <p>Dejar un momento de silencio y reﬂexión personal.</p>
+    <p>Dejar un momento de silencio y reflexión personal.</p>
     <p>
       Invitar a redactar el compromiso que asumirán al hacer la renovación de la
       promesa. Acompañar con mucha atención este momento.
     </p>
     <p>Comentar sobre los nuevos desafíos que les esperan</p>
     <ul>
-      <li><strong>- Reﬂexión:</strong> Ver actividad N°1 <strong>.</strong></li>
+      <li><strong>- Reflexión:</strong> Ver actividad N°1 <strong>.</strong></li>
       <li>
         <strong><em>- Palabra de Dios:</em></strong> Ver actividad N°1.
       </li>
