--- a/src/27-las-aventuras-de-bui-camey.html
+++ b/src/27-las-aventuras-de-bui-camey.html
@@ -379,7 +379,7 @@
       >
     </p>
     <p>
-      Esa oración, reﬂejaba los deseos más íntimos de BUI CAMEY y les abría los
+      Esa oración, reflejaba los deseos más íntimos de BUI CAMEY y les abría los
       ojos al resto de la Patrulla de lo que verdaderamente debían conseguir en
       esta nueva aventura, más allá de poner a salvo al pequeño lobo solitario.
       Pues no esperaron más y partieron. Por ahora, la búqueda era sencilla
@@ -675,9 +675,9 @@
       mutuamente.
     </p>
     <p>
-      La segunda, es que van recogiendo aquí y allá el jugo de las ﬂores, pero
+      La segunda, es que van recogiendo aquí y allá el jugo de las flores, pero
       observen que no recogen todo lo que encuentran, sino que se posan sobre
-      una y otra ﬂor y de cada una solo toman lo que sirve para fabricar su
+      una y otra flor y de cada una solo toman lo que sirve para fabricar su
       miel.
     </p>
     <p>
@@ -947,7 +947,7 @@
     </p>
     <p>
       “Sigamos teniendo fe”, atinó solo a decir BUI CAMEY, cuyas palabras
-      quedaron ﬂotando entre ellos.
+      quedaron flotando entre ellos.
     </p>
     <p>
       ÑORQUIN, el perrito mascota de la patrulla, movía su cola a la vez que iba
@@ -1191,7 +1191,7 @@
     </p>
     <p>
       Ya de vuelta y ya de noche, en aquella luna inmensa posada en lo mas alto
-      de la montaña, se reﬂejaba la figura de DIN, que aullando los saludaba.
+      de la montaña, se reflejaba la figura de DIN, que aullando los saludaba.
     </p>
     <p>El pequeño DIN, ahora con su manada, ya nunca mas estará solitario.</p>
     <h3>CAPITULO VII</h3>
