--- a/src/14-critica.html
+++ b/src/14-critica.html
@@ -60,21 +60,21 @@
       Se recomienda que esta sea una de las últimas consignas a trabajar, ya que
       requiere que los Rastreadores / Hogueras estén dispuestos a deconstruir su
       propio pensamiento y por lo tanto a cuestionar sus formas habituales de
-      actuar, para comenzar a pensar con mayor autonomía y menos inﬂuencias. La
-      confianza y el diálogo ﬂuido dentro del grupo son dos condiciones
+      actuar, para comenzar a pensar con mayor autonomía y menos influencias. La
+      confianza y el diálogo fluido dentro del grupo son dos condiciones
       importantes para llevar adelante la consigna.
     </p>
     <h2>TU MOMENTO</h2>
     <p>“¿Y a vos que te pasa con este tema?”</p>
     <p>
-      Dialogar con los animadores acerca de cuáles son las modas que inﬂuyen
+      Dialogar con los animadores acerca de cuáles son las modas que influyen
       sobre este grupo de rastreadores-hogueras. Pueden ser formas de vestir,
       hablar, sentir, los hobbies, etc. Estblecer un paralelismo con cuáles
       fueron las modas que vivieron los animadores cuando tenían la edad de los
       rastreadores-hogueras y responder comparando el hoy con el ayer ¿de dónde
       venían esas modas? ¿qué impacto tuvieron en nuestras vidas? ¿de qué manera
       nos sentímos integrados o excluidos del grupo cuando cumplíamos con “la
-      moda” de ese momento? ¿Cuán inﬂuenciables éramos cuando teníamos la edad
+      moda” de ese momento? ¿Cuán influenciables éramos cuando teníamos la edad
       de los chicos? ¿Qué publicidades de los medios de comunicación nos imponen
       modelos de belleza o de éxito? ¿Qué queremos decir cuando describimos a
       nuestra sociedad como materialista o consumista? Ejemplifiquen con
@@ -91,7 +91,7 @@
         la vida?»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       En esta ocasión la palabra de Jesús nos confronta y señala dos formas de
       vivir.
@@ -129,7 +129,7 @@
     </ol>
     <h2>ENTENDIÉNDOLOS</h2>
     <p>
-      Nadie está ajeno a la inﬂuencia de los medios masivos de comunicación, sin
+      Nadie está ajeno a la influencia de los medios masivos de comunicación, sin
       embargo, por su propia inseguridad y por la importancia que le dan a la
       imagen, los adolescentes se encuetran más sometidos a la moda y al
       bombardeo de mensajes que transmiten la TV e internet. Los medios de
@@ -143,7 +143,7 @@
     <h2>OBJETIVOS CUMPLIDOS</h2>
     <p>
       Los Rastreadores / Hogueras lograron adquirir distintas herramientas de
-      reﬂexión y análisis crítico para cuestionar su propio sentido común y
+      reflexión y análisis crítico para cuestionar su propio sentido común y
       tener una mente más abierta a pensar la realidad en términos complejos.
       Los Rastreadores / Hogueras comprendieron que la comunicación, la escucha
       de nuevas opniones es necesaria para no dejarse llevar por la corriente de
@@ -176,7 +176,7 @@
     <p>¿Existe intencionalidad?</p>
     <p>¿Dicen “la realidad” o se trata de interpretaciones?</p>
     <p>Relacionar con el grupo y con cada uno:</p>
-    <p>¿Cómo inﬂuyen los medios de comunicación en mi?</p>
+    <p>¿Cómo influyen los medios de comunicación en mi?</p>
     <p>
       ¿Qué mensajes trataron de transmitir? Si la actividad no resulta sencilla
       por no coincidir los programas vistos o se le quiere dar más profundidad,
@@ -194,11 +194,11 @@
     <p>
       ¿Qué cosas se pueden aprender de este medio de comunicación? ¿Cuáles no?
     </p>
-    <p>¿Reﬂeja la realidad de lo que pasa?</p>
+    <p>¿Refleja la realidad de lo que pasa?</p>
     <p>¿Existe intencionalidad? Relacionar con el grupo y con cada uno:</p>
-    <p>¿Cómo inﬂuyen los medios de comunicación en mi?</p>
+    <p>¿Cómo influyen los medios de comunicación en mi?</p>
     <p>¿Qué mensajes trataron de transmitir?</p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Cuando juzgamos lo bueno o malo de algo, partimos siempre de una formación
       ética previa. Ello significa que el resultado de un juicio no depende de la
@@ -223,7 +223,7 @@
       medio emplea para imponer su mirada.
     </p>
     <p>
-      También hay que descubrir la inﬂuencia de la publicidad en nuestra
+      También hay que descubrir la influencia de la publicidad en nuestra
       conducta y en nuestros deseos. Lograr una visión objetiva que nos permita
       elegir con mayor libertad lo que debemos pensar y lo que queremos
       consumir. No ceder al capricho de necesidades falsas impuestas por la
@@ -249,7 +249,7 @@
       ideología o tendencia. Puede ser opostora o no al gobierno, puede
       responder a intereses económicos, políticos, religiosos u otros. No hay
       que creerse todo lo que nos dicen, tratar de ser críticos, ser capaces de
-      hacer nuestro propio análisis de la realidad. Tenemos que reﬂexionar y
+      hacer nuestro propio análisis de la realidad. Tenemos que reflexionar y
       cuestionar los valores de los medios masivos de comunicación social; saber
       leerlos, verlos o escucharlos con sentido crítico.
     </p>
@@ -312,7 +312,7 @@
       respuestas y ofrecerlas a Jesús como oración.
     </p>
     <ul>
-      <li><strong>-Reﬂexión:</strong> Ver Actividad 1.</li>
+      <li><strong>-Reflexión:</strong> Ver Actividad 1.</li>
     </ul>
     <h3>Palabra de Dios: Los crímenes de Jerusalén. (Ez. 22, 23-29)</h3>
     <p>
