--- a/src/18-santidad.html
+++ b/src/18-santidad.html
@@ -82,7 +82,7 @@
       >
     </p>
     <p>
-      <strong>Marcá las frases que reﬂejan la realidad de tu grupo:</strong>
+      <strong>Marcá las frases que reflejan la realidad de tu grupo:</strong>
     </p>
     <p>
       Los rastreadores-hogueras creen que ser santo implica seguir un camino de
@@ -210,7 +210,7 @@
         santo.”»</em
       >
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       Dios no nos pide otra cosa que ser como Él. “Sean santos, porque yo soy
       santo”. Es impotante reconocer qué imagen tenemos de Dios, porque es la
@@ -248,7 +248,7 @@
       <li>
         - Los rastreadores-hogueras lograron descubrir en la vida de los santos
         un ejemplo a seguir posible, atractivo, concreto, novedoso que los llama
-        a ser felices viviendo un estilo de vida que reﬂeja a Jesús.
+        a ser felices viviendo un estilo de vida que refleja a Jesús.
       </li>
       <li>
         - Los rastreadores-hogueras comenzaron a aceptar que los propios
@@ -307,7 +307,7 @@
       ¿Cuáles son tus aciertos si te vieras en tu vida como un camino a la
       santidad?
     </p>
-    <h3>- Reﬂexión:</h3>
+    <h3>- Reflexión:</h3>
     <p>
       La palabra santidad puede ser mal comprendida por una mentalidad
       desfasada. No es un an-
@@ -338,7 +338,7 @@
       positivos y negativos. La educción del propio temperamento se denomina
       carácter. Al carácter lo vamos modificando, contruyendo y puliendo día a
       día con nuestro esfuerzo, con la ayuda de la comunidad, la familia y la
-      Gracia de Dios. Las oportunidades y condicionamientos sociales inﬂuyen en
+      Gracia de Dios. Las oportunidades y condicionamientos sociales influyen en
       el desarrollo y maduración de cada uno. En ellos también hay aspectos que
       escapan a nuestras decisiones y otros en los cuales tenemos plena
       responsabilidad. La realización como persona implica valorar y potenciar
@@ -418,7 +418,7 @@
     <p>
       La actividad pretende ubicar a los rastreadores-hogueras en la situación
       de construir su satidad de manera cotidiana, para ello busca que a través
-      de actividades y representaciones sobre su futuro puedan reﬂexionar acerca
+      de actividades y representaciones sobre su futuro puedan reflexionar acerca
       de cómo se desempeñan.
     </p>
     <h3>- Actividad:</h3>
@@ -491,7 +491,7 @@
     <p>¿Querés ser santo?</p>
     <ul>
       <li>
-        <strong>- Reﬂexión:</strong> (Recuperar la reﬂexión de la actividad 1)
+        <strong>- Reflexión:</strong> (Recuperar la reflexión de la actividad 1)
       </li>
     </ul>
     <h3>Palabra de Dios: Condiciones para ser santos (Efesios 4, 25-32)</h3>
